--- a/src/locales/ar/approval-flow-management.json
+++ b/src/locales/ar/approval-flow-management.json
@@ -1,76 +1,76 @@
 {
   "approvalFlow": {
-    "menu": "Approval Flow Management",
-    "description": "Manage and organize approval flows",
-    "addButton": "Add New Approval Flow",
+    "menu": "إدارة تدفقات الموافقة",
+    "description": "إدارة وتنظيم تدفقات الموافقة",
+    "addButton": "إضافة تدفق جديد",
     "table": {
-      "id": "ID",
-      "documentType": "Document Type",
-      "description": "Description",
-      "isActive": "Active",
-      "createdDate": "Created Date",
-      "createdBy": "Created By",
-      "actions": "Actions",
-      "showing": "Showing {{from}}-{{to}} / {{total}}",
-      "page": "Page {{current}} / {{total}}"
+      "id": "المعرف",
+      "documentType": "نوع المستند",
+      "description": "الوصف",
+      "isActive": "نشط",
+      "createdDate": "تاريخ الإنشاء",
+      "createdBy": "تم الإنشاء بواسطة",
+      "actions": "إجراءات",
+      "showing": "عرض {{from}}-{{to}} من {{total}}",
+      "page": "صفحة {{current}} / {{total}}"
     },
     "form": {
-      "addTitle": "Add New Approval Flow",
-      "editTitle": "Edit Approval Flow",
-      "addDescription": "Enter new approval flow information",
-      "editDescription": "Edit approval flow information",
-      "documentType": "Document Type",
-      "selectDocumentType": "Select document type",
-      "noDocumentTypeSelected": "No document type selected",
-      "documentTypeRequired": "Document type selection is required",
-      "description": "Description",
-      "descriptionPlaceholder": "Enter description (optional)",
-      "descriptionMaxLength": "Description can be at most 200 characters",
-      "isActive": "Active",
-      "isActiveDescription": "Active status of the approval flow",
-      "cancel": "Cancel",
-      "save": "Save",
-      "saving": "Saving..."
+      "addTitle": "إضافة تدفق موافقة جديد",
+      "editTitle": "تعديل تدفق الموافقة",
+      "addDescription": "إدخال معلومات تدفق الموافقة الجديد",
+      "editDescription": "تعديل معلومات تدفق الموافقة",
+      "documentType": "نوع المستند",
+      "selectDocumentType": "اختر نوع المستند",
+      "noDocumentTypeSelected": "لم يتم اختيار نوع المستند",
+      "documentTypeRequired": "اختيار نوع المستند مطلوب",
+      "description": "الوصف",
+      "descriptionPlaceholder": "أدخل الوصف (اختياري)",
+      "descriptionMaxLength": "الوصف يمكن أن يكون بحد أقصى 200 حرف",
+      "isActive": "نشط",
+      "isActiveDescription": "حالة نشاط تدفق الموافقة",
+      "cancel": "إلغاء",
+      "save": "حفظ",
+      "saving": "جاري الحفظ..."
     },
-    "loading": "Loading...",
-    "noData": "No data",
-    "active": "Active",
-    "inactive": "Inactive",
-    "previous": "Previous",
-    "next": "Next",
+    "loading": "جاري التحميل...",
+    "noData": "لا توجد بيانات",
+    "active": "نشط",
+    "inactive": "غير نشط",
+    "previous": "السابق",
+    "next": "التالي",
     "delete": {
-      "action": "Delete",
-      "cancel": "Cancel",
-      "confirmTitle": "Delete Approval Flow",
-      "confirmMessage": "Are you sure you want to delete this approval flow?"
+      "action": "حذف",
+      "cancel": "إلغاء",
+      "confirmTitle": "حذف تدفق الموافقة",
+      "confirmMessage": "هل أنت متأكد من أنك تريد حذف تدفق الموافقة هذا؟"
     },
     "documentType": {
-      "offer": "Offer",
-      "request": "Request",
-      "order": "Order"
+      "offer": "عرض",
+      "request": "طلب",
+      "order": "طلب شراء"
     }
   },
   "approvalFlowStep": {
-    "title": "Flow Steps",
-    "addButton": "Add Step",
-    "empty": "No steps added yet",
-    "unknownRoleGroup": "No Role Group",
-    "stepDescription": "Approval Order: {{order}}",
+    "title": "خطوات التدفق",
+    "addButton": "إضافة خطوة",
+    "empty": "لم تتم إضافة خطوات بعد",
+    "unknownRoleGroup": "لا يوجد مجموعة أدوار",
+    "stepDescription": "ترتيب الموافقة: {{order}}",
     "form": {
-      "addTitle": "Add New Step",
-      "editTitle": "Edit Step",
-      "addDescription": "Add new flow step",
-      "editDescription": "Edit flow step information",
-      "approvalRoleGroup": "Role Group",
-      "selectRoleGroup": "Select role group",
-      "noRoleGroupSelected": "No role group selected",
-      "approvalRoleGroupIdRequired": "Role group selection is required",
-      "cancel": "Cancel",
-      "save": "Save",
-      "saving": "Saving..."
+      "addTitle": "إضافة خطوة جديدة",
+      "editTitle": "تعديل الخطوة",
+      "addDescription": "إضافة خطوة جديدة للتدفق",
+      "editDescription": "تعديل معلومات الخطوة",
+      "approvalRoleGroup": "مجموعة الأدوار",
+      "selectRoleGroup": "اختر مجموعة الأدوار",
+      "noRoleGroupSelected": "لم يتم اختيار مجموعة أدوار",
+      "approvalRoleGroupIdRequired": "اختيار مجموعة الأدوار مطلوب",
+      "cancel": "إلغاء",
+      "save": "حفظ",
+      "saving": "جاري الحفظ..."
     },
     "messages": {
-      "deleteConfirm": "Are you sure you want to delete this step?"
+      "deleteConfirm": "هل أنت متأكد من أنك تريد حذف هذه الخطوة؟"
     }
   }
 }
