--- a/src/locales/ar/approval-role-management.json
+++ b/src/locales/ar/approval-role-management.json
@@ -1,51 +1,51 @@
 {
   "approvalRole": {
-    "menu": "Approval Role Management",
-    "description": "Manage and organize approval roles",
-    "addButton": "Add New Approval Role",
-    "searchPlaceholder": "Search...",
-    "refresh": "Refresh",
-    "loading": "Loading...",
-    "noData": "No data",
+    "menu": "إدارة أدوار الموافقة",
+    "description": "إدارة وتنظيم أدوار الموافقة",
+    "addButton": "إضافة دور جديد",
+    "searchPlaceholder": "بحث...",
+    "refresh": "تحديث",
+    "loading": "جاري التحميل...",
+    "noData": "لا توجد بيانات",
     "table": {
-      "id": "ID",
-      "approvalRoleGroupName": "Role Group",
-      "name": "Role Name",
-      "maxAmount": "Max Amount",
-      "createdDate": "Created Date",
-      "createdBy": "Created By",
-      "actions": "Actions",
-      "totalRecords": "Total {{count}} records.",
-      "page": "Page {{current}} / {{total}}",
-      "previous": "Previous",
-      "next": "Next"
+      "id": "المعرف",
+      "approvalRoleGroupName": "مجموعة الأدوار",
+      "name": "اسم الدور",
+      "maxAmount": "الحد الأقصى للمبلغ",
+      "createdDate": "تاريخ الإنشاء",
+      "createdBy": "تم الإنشاء بواسطة",
+      "actions": "إجراءات",
+      "totalRecords": "إجمالي {{count}} سجل.",
+      "page": "صفحة {{current}} / {{total}}",
+      "previous": "السابق",
+      "next": "التالي"
     },
     "delete": {
-      "confirmTitle": "Delete Confirmation",
-      "confirmMessage": "Are you sure you want to delete this record? This action cannot be undone.",
-      "cancelButton": "Cancel",
-      "confirmButton": "Delete",
-      "deleting": "Deleting..."
+      "confirmTitle": "تأكيد الحذف",
+      "confirmMessage": "هل أنت متأكد من أنك تريد حذف هذا السجل؟ لا يمكن التراجع عن هذا الإجراء.",
+      "cancelButton": "إلغاء",
+      "confirmButton": "حذف",
+      "deleting": "جاري الحذف..."
     },
     "form": {
-      "editTitle": "Edit Approval Role",
-      "addTitle": "Add New Approval Role",
-      "editDescription": "Edit approval role details",
-      "addDescription": "Enter new approval role details",
-      "approvalRoleGroupId": "Approval Role Group",
-      "selectApprovalRoleGroup": "Select Approval Role Group",
-      "noApprovalRoleGroupSelected": "No approval role group selected",
-      "name": "Role Name",
-      "namePlaceholder": "Enter role name",
-      "maxAmount": "Max Amount",
-      "maxAmountPlaceholder": "Enter max amount",
-      "approvalRoleGroupIdRequired": "Approval role group selection is required",
-      "nameRequired": "Role name is required",
-      "nameMaxLength": "Role name can be at most 100 characters",
-      "maxAmountMin": "Max amount cannot be less than 0",
-      "cancel": "Cancel",
-      "save": "Save",
-      "saving": "Saving..."
+      "editTitle": "تعديل دور الموافقة",
+      "addTitle": "إضافة دور موافقة جديد",
+      "editDescription": "تعديل تفاصيل دور الموافقة",
+      "addDescription": "إدخال تفاصيل الدور الجديد",
+      "approvalRoleGroupId": "مجموعة أدوار الموافقة",
+      "selectApprovalRoleGroup": "اختر مجموعة الأدوار",
+      "noApprovalRoleGroupSelected": "لم يتم اختيار مجموعة أدوار",
+      "name": "اسم الدور",
+      "namePlaceholder": "أدخل اسم الدور",
+      "maxAmount": "الحد الأقصى للمبلغ",
+      "maxAmountPlaceholder": "أدخل الحد الأقصى للمبلغ",
+      "approvalRoleGroupIdRequired": "اختيار مجموعة الأدوار مطلوب",
+      "nameRequired": "اسم الدور مطلوب",
+      "nameMaxLength": "الاسم يمكن أن يكون بحد أقصى 100 حرف",
+      "maxAmountMin": "الحد الأقصى للمبلغ لا يمكن أن يكون أقل من 0",
+      "cancel": "إلغاء",
+      "save": "حفظ",
+      "saving": "جاري الحفظ..."
     }
   }
 }
