--- a/src/locales/ar/approval-user-role-management.json
+++ b/src/locales/ar/approval-user-role-management.json
@@ -1,46 +1,46 @@
 {
   "approvalUserRole": {
-    "menu": "Approval User Role Management",
-    "description": "Manage and organize approval user roles",
-    "addButton": "Add New Role",
-    "searchPlaceholder": "Search...",
-    "refresh": "Refresh",
-    "loading": "Loading...",
-    "noData": "No data",
+    "menu": "إدارة أدوار مستخدمي الموافقة",
+    "description": "إدارة وتنظيم أدوار مستخدمي الموافقة",
+    "addButton": "إضافة دور جديد",
+    "searchPlaceholder": "بحث...",
+    "refresh": "تحديث",
+    "loading": "جاري التحميل...",
+    "noData": "لا توجد بيانات",
     "table": {
-      "id": "ID",
-      "userFullName": "User",
-      "approvalRoleName": "Approval Role",
-      "createdDate": "Created Date",
-      "createdBy": "Created By",
-      "actions": "Actions",
-      "showing": "Showing {{from}}-{{to}} / {{total}}",
-      "page": "Page {{current}} / {{total}}",
-      "previous": "Previous",
-      "next": "Next"
+      "id": "المعرف",
+      "userFullName": "المستخدم",
+      "approvalRoleName": "دور الموافقة",
+      "createdDate": "تاريخ الإنشاء",
+      "createdBy": "تم الإنشاء بواسطة",
+      "actions": "إجراءات",
+      "showing": "عرض {{from}}-{{to}} / {{total}}",
+      "page": "صفحة {{current}} / {{total}}",
+      "previous": "السابق",
+      "next": "التالي"
     },
     "delete": {
-      "title": "Delete Role",
-      "confirmMessage": "Are you sure you want to delete this user role?",
-      "confirmButton": "Delete",
-      "cancelButton": "Cancel"
+      "title": "حذف الدور",
+      "confirmMessage": "هل أنت متأكد من أنك تريد حذف دور المستخدم هذا؟",
+      "confirmButton": "حذف",
+      "cancelButton": "إلغاء"
     },
     "form": {
-      "editTitle": "Edit Approval User Role",
-      "addTitle": "Add New Approval User Role",
-      "editDescription": "Edit approval user role information",
-      "addDescription": "Enter new approval user role information",
-      "userId": "User",
-      "selectUser": "Select User",
-      "noUserSelected": "No user selected",
-      "approvalRoleId": "Approval Role",
-      "selectApprovalRole": "Select Approval Role",
-      "noApprovalRoleSelected": "No approval role selected",
-      "userIdRequired": "User selection is required",
-      "approvalRoleIdRequired": "Approval role selection is required",
-      "save": "Save",
-      "saving": "Saving...",
-      "cancel": "Cancel"
+      "editTitle": "تعديل دور المستخدم",
+      "addTitle": "إضافة دور مستخدم جديد",
+      "editDescription": "تعديل معلومات دور المستخدم",
+      "addDescription": "إدخال معلومات دور المستخدم الجديد",
+      "userId": "المستخدم",
+      "selectUser": "اختر المستخدم",
+      "noUserSelected": "لم يتم اختيار مستخدم",
+      "approvalRoleId": "دور الموافقة",
+      "selectApprovalRole": "اختر دور الموافقة",
+      "noApprovalRoleSelected": "لم يتم اختيار دور",
+      "userIdRequired": "اختيار المستخدم مطلوب",
+      "approvalRoleIdRequired": "اختيار دور الموافقة مطلوب",
+      "save": "حفظ",
+      "saving": "جاري الحفظ...",
+      "cancel": "إلغاء"
     }
   }
 }
