--- a/src/locales/ar/auth.json
+++ b/src/locales/ar/auth.json
@@ -1,46 +1,46 @@
 {
   "auth": {
     "login": {
-      "title": "Sales & Customer Management",
-      "slogan": "\"Manage your business with <1>v3rii</1>, not with guesses.\"",
-      "branchPlaceholder": "Select Branch",
-      "emailPlaceholder": "Corporate Email",
-      "passwordPlaceholder": "Password",
-      "rememberMe": "Remember Me",
-      "forgotPassword": "Forgot Password?",
-      "submitButton": "Login",
-      "processing": "Processing...",
-      "sessionExpired": "Your session has expired. Please login again."
+      "title": "إدارة المبيعات والعملاء",
+      "slogan": "\"أدر عملك مع <1>v3rii</1>، وليس بالتخمين.\"",
+      "branchPlaceholder": "اختر الفرع",
+      "emailPlaceholder": "البريد الإلكتروني للشركة",
+      "passwordPlaceholder": "كلمة المرور",
+      "rememberMe": "تذكرني",
+      "forgotPassword": "هل نسيت كلمة المرور؟",
+      "submitButton": "تسجيل الدخول",
+      "processing": "جاري المعالجة...",
+      "sessionExpired": "انتهت صلاحية الجلسة. يرجى تسجيل الدخول مرة أخرى."
     },
     "forgotPassword": {
-      "title": "Forgot Password",
-      "description": "Enter your email address to reset your password. We will send you a password reset link.",
-      "emailPlaceholder": "Email Address",
-      "submitButton": "Send Password Reset Request",
-      "backToLogin": "Back to Login",
-      "processing": "Processing..."
+      "title": "هل نسيت كلمة المرور؟",
+      "description": "أدخل عنوان بريدك الإلكتروني لإعادة تعيين كلمة المرور. سنرسل لك رابط إعادة تعيين كلمة المرور.",
+      "emailPlaceholder": "عنوان البريد الإلكتروني",
+      "submitButton": "إرسال طلب إعادة التعيين",
+      "backToLogin": "العودة لتسجيل الدخول",
+      "processing": "جاري المعالجة..."
     },
     "resetPassword": {
-      "title": "Reset Password",
-      "newPasswordPlaceholder": "New Password",
-      "confirmPasswordPlaceholder": "Confirm Password",
-      "submitButton": "Reset Password",
-      "processing": "Processing...",
-      "invalidToken": "Invalid or missing token. Please check the password reset link again.",
-      "tokenNotFound": "Token not found"
+      "title": "إعادة تعيين كلمة المرور",
+      "newPasswordPlaceholder": "كلمة المرور الجديدة",
+      "confirmPasswordPlaceholder": "تأكيد كلمة المرور",
+      "submitButton": "إعادة تعيين كلمة المرور",
+      "processing": "جاري المعالجة...",
+      "invalidToken": "الرمز غير صالح أو مفقود. يرجى التحقق من الرابط مرة أخرى.",
+      "tokenNotFound": "الرمز غير موجود"
     },
     "validation": {
-      "emailInvalid": "Please enter a valid email address",
-      "passwordRequired": "Password is required",
-      "branchRequired": "Branch selection is required",
-      "passwordMinLength": "Password must be at least 8 characters",
-      "tokenRequired": "Token is required",
-      "newPasswordMinLength": "Password must be at least 6 characters",
-      "confirmPasswordRequired": "Confirm password is required",
-      "passwordsMismatch": "Passwords do not match",
-      "currentPasswordRequired": "Current password is required",
-      "newPasswordMaxLength": "New password must be at most 100 characters",
-      "newPasswordSameAsCurrent": "New password cannot be the same as current password"
+      "emailInvalid": "يرجى إدخال عنوان بريد إلكتروني صالح",
+      "passwordRequired": "كلمة المرور مطلوبة",
+      "branchRequired": "اختيار الفرع مطلوب",
+      "passwordMinLength": "يجب أن تكون كلمة المرور 8 أحرف على الأقل",
+      "tokenRequired": "الرمز مطلوب",
+      "newPasswordMinLength": "يجب أن تكون كلمة المرور 6 أحرف على الأقل",
+      "confirmPasswordRequired": "تأكيد كلمة المرور مطلوب",
+      "passwordsMismatch": "كلمات المرور غير متطابقة",
+      "currentPasswordRequired": "كلمة المرور الحالية مطلوبة",
+      "newPasswordMaxLength": "يجب أن تكون كلمة المرور الجديدة 100 حرف كحد أقصى",
+      "newPasswordSameAsCurrent": "لا يمكن أن تكون كلمة المرور الجديدة نفس كلمة المرور الحالية"
     }
   }
 }
