--- a/src/locales/ar/city-management.json
+++ b/src/locales/ar/city-management.json
@@ -1,50 +1,50 @@
 {
-  "menu": "City Management",
-  "description": "Manage and organize cities",
-  "addButton": "Add New City",
-  "searchPlaceholder": "Search...",
-  "loading": "Loading...",
-  "noData": "No data found",
+  "menu": "إدارة المدن",
+  "description": "إدارة وتنظيم المدن",
+  "addButton": "إضافة مدينة جديدة",
+  "searchPlaceholder": "بحث...",
+  "loading": "جار التحميل...",
+  "noData": "لا توجد بيانات",
   "stats": {
-    "totalCities": "Total Cities",
-    "activeCities": "Active Cities",
-    "newThisMonth": "New This Month"
+    "totalCities": "إجمالي المدن",
+    "activeCities": "المدن النشطة",
+    "newThisMonth": "جديد هذا الشهر"
   },
   "table": {
-    "id": "ID",
-    "name": "City Name",
-    "erpCode": "ERP Code",
-    "countryName": "Country Name",
-    "createdDate": "Created Date",
-    "createdBy": "Created By",
-    "showing": "Showing {{from}}-{{to}} / {{total}}",
-    "page": "Page {{current}} / {{total}}"
+    "id": "المعرف",
+    "name": "اسم المدينة",
+    "erpCode": "كود ERP",
+    "countryName": "اسم الدولة",
+    "createdDate": "تاريخ الإنشاء",
+    "createdBy": "تم الإنشاء بواسطة",
+    "showing": "عرض {{from}}-{{to}} / {{total}}",
+    "page": "صفحة {{current}} / {{total}}"
   },
   "form": {
-    "editCity": "Edit City",
-    "addCity": "Add New City",
-    "editDescription": "Edit city details",
-    "addDescription": "Enter new city details",
-    "name": "City Name",
-    "namePlaceholder": "Enter city name",
-    "country": "Country",
-    "selectCountry": "Select country",
-    "erpCode": "ERP Code",
-    "erpCodePlaceholder": "Enter ERP code (optional)",
-    "cancel": "Cancel",
-    "save": "Save",
-    "saving": "Saving...",
-    "nameRequired": "City name is required",
-    "nameMaxLength": "City name can be at most 100 characters",
-    "erpCodeMaxLength": "ERP code can be at most 10 characters",
-    "countryRequired": "Country selection is required"
+    "editCity": "تعديل المدينة",
+    "addCity": "إضافة مدينة جديدة",
+    "editDescription": "تعديل تفاصيل المدينة",
+    "addDescription": "إدخال تفاصيل مدينة جديدة",
+    "name": "اسم المدينة",
+    "namePlaceholder": "أدخل اسم المدينة",
+    "country": "الدولة",
+    "selectCountry": "اختر الدولة",
+    "erpCode": "كود ERP",
+    "erpCodePlaceholder": "أدخل كود ERP (اختياري)",
+    "cancel": "إلغاء",
+    "save": "حفظ",
+    "saving": "جار الحفظ...",
+    "nameRequired": "اسم المدينة مطلوب",
+    "nameMaxLength": "اسم المدينة لا يمكن أن يتجاوز 100 حرف",
+    "erpCodeMaxLength": "كود ERP لا يمكن أن يتجاوز 10 أحرف",
+    "countryRequired": "اختيار الدولة مطلوب"
   },
-  "actions": "Actions",
+  "actions": "إجراءات",
   "delete": {
-    "button": "Delete",
-    "confirmTitle": "Delete City",
-    "confirmMessage": "Are you sure you want to delete {{name}}?"
+    "button": "حذف",
+    "confirmTitle": "حذف المدينة",
+    "confirmMessage": "هل أنت متأكد من حذف {{name}}؟"
   },
-  "previous": "Previous",
-  "next": "Next"
+  "previous": "السابق",
+  "next": "التالي"
 }
