--- a/src/locales/ar/country-management.json
+++ b/src/locales/ar/country-management.json
@@ -1,52 +1,52 @@
 {
-  "menu": "Country Management",
-  "description": "Manage and edit countries",
-  "addButton": "Add New Country",
-  "search": "Search...",
-  "loading": "Loading...",
-  "noData": "No data found",
-  "actions": "Actions",
-  "previous": "Previous",
-  "next": "Next",
-  "deleteConfirmTitle": "Delete Confirmation",
-  "cancel": "Cancel",
-  "deleting": "Deleting...",
-  "delete": "Delete",
-  "saving": "Saving...",
-  "save": "Save",
+  "menu": "إدارة الدول",
+  "description": "إدارة وتعديل الدول",
+  "addButton": "إضافة دولة جديدة",
+  "search": "بحث...",
+  "loading": "جار التحميل...",
+  "noData": "لا توجد بيانات",
+  "actions": "إجراءات",
+  "previous": "السابق",
+  "next": "التالي",
+  "deleteConfirmTitle": "تأكيد الحذف",
+  "cancel": "إلغاء",
+  "deleting": "جار الحذف...",
+  "delete": "حذف",
+  "saving": "جار الحفظ...",
+  "save": "حفظ",
   "stats": {
-    "totalCountries": "Total Countries",
-    "activeCountries": "Active Countries",
-    "newThisMonth": "New This Month"
+    "totalCountries": "إجمالي الدول",
+    "activeCountries": "الدول النشطة",
+    "newThisMonth": "جديد هذا الشهر"
   },
   "table": {
-    "id": "ID",
-    "name": "Country Name",
-    "code": "Code",
-    "erpCode": "ERP Code",
-    "createdDate": "Created Date",
-    "createdBy": "Created By",
-    "showing": "Showing {{from}}-{{to}} / {{total}}",
-    "page": "Page {{current}} / {{total}}"
+    "id": "المعرف",
+    "name": "اسم الدولة",
+    "code": "الكود",
+    "erpCode": "كود ERP",
+    "createdDate": "تاريخ الإنشاء",
+    "createdBy": "تم الإنشاء بواسطة",
+    "showing": "عرض {{from}}-{{to}} / {{total}}",
+    "page": "صفحة {{current}} / {{total}}"
   },
   "form": {
-    "addCountry": "Add New Country",
-    "editCountry": "Edit Country",
-    "addDescription": "Enter new country information",
-    "editDescription": "Edit country information",
-    "name": "Country Name",
-    "namePlaceholder": "Enter country name",
-    "code": "Country Code",
-    "codePlaceholder": "Enter country code (e.g. TR, US)",
-    "erpCode": "ERP Code",
-    "erpCodePlaceholder": "Enter ERP code (optional)",
-    "nameRequired": "Country name is required",
-    "nameMaxLength": "Country name cannot exceed 100 characters",
-    "codeMinLength": "Country code must be at least 2 characters",
-    "codeMaxLength": "Country code cannot exceed 5 characters",
-    "erpCodeMaxLength": "ERP code cannot exceed 10 characters"
+    "addCountry": "إضافة دولة جديدة",
+    "editCountry": "تعديل الدولة",
+    "addDescription": "إدخال معلومات دولة جديدة",
+    "editDescription": "تعديل معلومات الدولة",
+    "name": "اسم الدولة",
+    "namePlaceholder": "أدخل اسم الدولة",
+    "code": "كود الدولة",
+    "codePlaceholder": "أدخل كود الدولة (مثال: TR, US)",
+    "erpCode": "كود ERP",
+    "erpCodePlaceholder": "أدخل كود ERP (اختياري)",
+    "nameRequired": "اسم الدولة مطلوب",
+    "nameMaxLength": "اسم الدولة لا يمكن أن يتجاوز 100 حرف",
+    "codeMinLength": "كود الدولة يجب أن يكون حرفين على الأقل",
+    "codeMaxLength": "كود الدولة لا يمكن أن يتجاوز 5 أحرف",
+    "erpCodeMaxLength": "كود ERP لا يمكن أن يتجاوز 10 أحرف"
   },
   "deleteConfirm": {
-    "confirmMessage": "Are you sure you want to delete {{name}}?"
+    "confirmMessage": "هل أنت متأكد من حذف {{name}}؟"
   }
 }
