--- a/src/locales/ar/customer-type-management.json
+++ b/src/locales/ar/customer-type-management.json
@@ -1,56 +1,56 @@
 {
-  "menu": "Customer Type Management",
-  "description": "Manage and edit customer types",
-  "addButton": "Add New Customer Type",
-  "loading": "Loading...",
-  "noData": "No data found",
-  "actions": "Actions",
-  "previous": "Previous",
-  "next": "Next",
+  "menu": "إدارة أنواع العملاء",
+  "description": "إدارة وتحرير أنواع العملاء",
+  "addButton": "إضافة نوع عميل جديد",
+  "loading": "جاري التحميل...",
+  "noData": "لا توجد بيانات",
+  "actions": "إجراءات",
+  "previous": "السابق",
+  "next": "التالي",
   "stats": {
-    "totalCustomerTypes": "Total Customer Types",
-    "activeCustomerTypes": "Active Customer Types",
-    "newThisMonth": "New This Month"
+    "totalCustomerTypes": "إجمالي أنواع العملاء",
+    "activeCustomerTypes": "أنواع العملاء النشطة",
+    "newThisMonth": "جديد هذا الشهر"
   },
   "table": {
-    "id": "ID",
-    "name": "Customer Type Name",
-    "description": "Description",
-    "createdDate": "Created Date",
-    "createdBy": "Created By",
-    "updatedDate": "Updated Date",
-    "updatedBy": "Updated By",
-    "showing": "Showing {{from}}-{{to}} / {{total}}",
-    "page": "Page {{current}} / {{total}}"
+    "id": "المعرف",
+    "name": "اسم نوع العميل",
+    "description": "الوصف",
+    "createdDate": "تاريخ الإنشاء",
+    "createdBy": "تم الإنشاء بواسطة",
+    "updatedDate": "تاريخ التحديث",
+    "updatedBy": "تم التحديث بواسطة",
+    "showing": "عرض {{from}}-{{to}} / {{total}}",
+    "page": "صفحة {{current}} / {{total}}"
   },
   "form": {
-    "addCustomerType": "Add New Customer Type",
-    "editCustomerType": "Edit Customer Type",
-    "addDescription": "Enter new customer type information",
-    "editDescription": "Edit customer type information",
-    "name": "Customer Type Name",
-    "namePlaceholder": "Enter customer type name",
-    "nameRequired": "Customer type name is required",
-    "nameMaxLength": "Customer type name must be at most 100 characters",
-    "description": "Description",
-    "descriptionPlaceholder": "Enter description (optional)",
-    "descriptionMaxLength": "Description must be at most 500 characters",
-    "cancel": "Cancel",
-    "save": "Save",
-    "saving": "Saving..."
+    "addCustomerType": "إضافة نوع عميل جديد",
+    "editCustomerType": "تحرير نوع العميل",
+    "addDescription": "أدخل معلومات نوع العميل الجديد",
+    "editDescription": "تحرير معلومات نوع العميل",
+    "name": "اسم نوع العميل",
+    "namePlaceholder": "أدخل اسم نوع العميل",
+    "nameRequired": "اسم نوع العميل مطلوب",
+    "nameMaxLength": "يجب أن يكون اسم نوع العميل 100 حرف كحد أقصى",
+    "description": "الوصف",
+    "descriptionPlaceholder": "أدخل الوصف (اختياري)",
+    "descriptionMaxLength": "يجب أن يكون الوصف 500 حرف كحد أقصى",
+    "cancel": "إلغاء",
+    "save": "حفظ",
+    "saving": "جاري الحفظ..."
   },
   "delete": {
-    "confirmTitle": "Delete Customer Type",
-    "confirmMessage": "Are you sure you want to delete {{name}} customer type?",
-    "confirmButton": "Delete",
-    "deleting": "Deleting..."
+    "confirmTitle": "حذف نوع العميل",
+    "confirmMessage": "هل أنت متأكد أنك تريد حذف نوع العميل {{name}}؟",
+    "confirmButton": "حذف",
+    "deleting": "جاري الحذف..."
   },
   "messages": {
-    "createSuccess": "Customer type created successfully",
-    "createError": "Customer type could not be created",
-    "updateSuccess": "Customer type updated successfully",
-    "updateError": "Customer type could not be updated",
-    "deleteSuccess": "Customer type deleted successfully",
-    "deleteError": "Customer type could not be deleted"
+    "createSuccess": "تم إنشاء نوع العميل بنجاح",
+    "createError": "تعذر إنشاء نوع العميل",
+    "updateSuccess": "تم تحديث نوع العميل بنجاح",
+    "updateError": "تعذر تحديث نوع العميل",
+    "deleteSuccess": "تم حذف نوع العميل بنجاح",
+    "deleteError": "تعذر حذف نوع العميل"
   }
 }
