--- a/src/locales/ar/daily-tasks.json
+++ b/src/locales/ar/daily-tasks.json
@@ -1,42 +1,42 @@
 {
-  "title": "Daily Tasks",
-  "fullTitle": "Daily Activities & To-Do",
-  "subtitle": "Manage your tasks, track activities, and use the calendar view",
-  "completed": "Completed",
-  "pending": "Pending",
-  "completion": "Completion",
-  "searchPlaceholder": "Search task...",
-  "allTasks": "All Tasks",
-  "priority": "Priority",
-  "allPriorities": "All",
-  "newTask": "New Task",
-  "newTodo": "New To-Do",
-  "noTasks": "No tasks found",
-  "tasks": "Tasks",
-  "weeklyTasks": "Weekly Tasks",
-  "todoList": "To-Do List",
-  "dailyList": "Daily List",
-  "calendar": "Calendar",
-  "status": "Status:",
-  "all": "All",
-  "inProgress": "In Progress",
-  "employee": "Employee:",
-  "allEmployees": "All Employees",
-  "unassigned": "Unassigned",
-  "unknownUser": "Unknown User",
-  "start": "Start",
-  "putOnHold": "Put on Hold",
-  "complete": "Complete",
-  "more": "more",
-  "today": "Today",
-  "loading": "Loading...",
+  "title": "المهام اليومية",
+  "fullTitle": "الأنشطة اليومية وقائمة المهام",
+  "subtitle": "إدارة مهامك، تتبع الأنشطة، واستخدم عرض التقويم",
+  "completed": "مكتمل",
+  "pending": "معلق",
+  "completion": "إكمال",
+  "searchPlaceholder": "بحث عن مهمة...",
+  "allTasks": "جميع المهام",
+  "priority": "الأولوية",
+  "allPriorities": "الكل",
+  "newTask": "مهمة جديدة",
+  "newTodo": "مهمة جديدة",
+  "noTasks": "لم يتم العثور على مهام",
+  "tasks": "المهام",
+  "weeklyTasks": "المهام الأسبوعية",
+  "todoList": "قائمة المهام",
+  "dailyList": "القائمة اليومية",
+  "calendar": "التقويم",
+  "status": "الحالة:",
+  "all": "الكل",
+  "inProgress": "قيد التنفيذ",
+  "employee": "الموظف:",
+  "allEmployees": "جميع الموظفين",
+  "unassigned": "غير معين",
+  "unknownUser": "مستخدم غير معروف",
+  "start": "بدء",
+  "putOnHold": "تعليق",
+  "complete": "إكمال",
+  "more": "المزيد",
+  "today": "اليوم",
+  "loading": "جاري التحميل...",
   "days": {
-    "mon": "Mon",
-    "tue": "Tue",
-    "wed": "Wed",
-    "thu": "Thu",
-    "fri": "Fri",
-    "sat": "Sat",
-    "sun": "Sun"
+    "mon": "اثنين",
+    "tue": "ثلاثاء",
+    "wed": "أربعاء",
+    "thu": "خميس",
+    "fri": "جمعة",
+    "sat": "سبت",
+    "sun": "أحد"
   }
 }
