--- a/src/locales/ar/erp-customer-management.json
+++ b/src/locales/ar/erp-customer-management.json
@@ -1,22 +1,22 @@
 {
-  "menu": "ERP Customer",
-  "description": "Customer list from ERP system",
-  "loading": "Loading...",
-  "noData": "No customers found",
+  "menu": "عملاء ERP",
+  "description": "قائمة العملاء من نظام ERP",
+  "loading": "جاري التحميل...",
+  "noData": "لم يتم العثور على عملاء",
   "table": {
-    "branchCode": "Branch Code",
-    "businessUnitCode": "Business Unit Code",
-    "customerCode": "Customer Code",
-    "customerName": "Customer Name",
-    "phone": "Phone",
-    "city": "City",
-    "district": "District",
-    "address": "Address",
-    "countryCode": "Country Code",
-    "email": "Email",
-    "website": "Website",
-    "taxNumber": "Tax Number",
-    "taxOffice": "Tax Office",
-    "tcknNumber": "TCKN Number"
+    "branchCode": "رمز الفرع",
+    "businessUnitCode": "رمز وحدة العمل",
+    "customerCode": "رمز العميل",
+    "customerName": "اسم العميل",
+    "phone": "الهاتف",
+    "city": "المدينة",
+    "district": "المنطقة",
+    "address": "العنوان",
+    "countryCode": "رمز البلد",
+    "email": "البريد الإلكتروني",
+    "website": "الموقع الإلكتروني",
+    "taxNumber": "الرقم الضريبي",
+    "taxOffice": "مكتب الضرائب",
+    "tcknNumber": "رقم TCKN"
   }
 }
