--- a/src/locales/ar/product-select-dialog.json
+++ b/src/locales/ar/product-select-dialog.json
@@ -1,10 +1,16 @@
 {
-  "title": "Select Product",
-  "description": "Select a product to add to the quotation line",
-  "product": "PRODUCT",
-  "noProducts": "No products found",
-  "noResults": "No search results found",
-  "searchPlaceholder": "Search by product code or name...",
-  "voiceSearch": "Voice search",
-  "loading": "Loading"
+  "title": "اختيار المنتج",
+  "searchPlaceholder": "بحث عن منتج...",
+  "select": "اختيار",
+  "cancel": "إلغاء",
+  "columns": {
+    "code": "الرمز",
+    "name": "الاسم",
+    "description": "الوصف",
+    "price": "السعر",
+    "currency": "العملة",
+    "stock": "المخزون"
+  },
+  "noData": "لم يتم العثور على منتجات",
+  "loading": "جاري تحميل المنتجات..."
 }
