--- a/src/locales/ar/title-management.json
+++ b/src/locales/ar/title-management.json
@@ -1,46 +1,35 @@
 {
-  "loading": "Loading...",
-  "noData": "No data found",
-  "search": "Search...",
-  "refresh": "Refresh",
-  "previous": "Previous",
-  "next": "Next",
-  "cancel": "Cancel",
-  "save": "Save",
-  "saving": "Saving...",
-  "delete": "Delete",
-  "deleting": "Deleting...",
-  "actions": "Actions",
-  "edit": "Edit",
-  "header": {
-    "title": "Title Management",
-    "description": "Manage title definitions here."
-  },
+  "menu": "إدارة الألقاب",
+  "title": "إدارة الألقاب",
+  "description": "إدارة وتعديل الألقاب",
+  "addButton": "إضافة لقب جديد",
+  "deleteTitle": "حذف اللقب",
+  "deleteMessage": "هل أنت متأكد أنك تريد حذف هذا اللقب؟",
+  "deleteSuccess": "تم حذف اللقب بنجاح",
   "table": {
-    "id": "ID",
-    "name": "Title Name",
-    "code": "Code",
-    "createdDate": "Created Date",
-    "createdBy": "Created By",
-    "showing": "Showing {{from}}-{{to}} / {{total}}",
-    "page": "Page {{current}} / {{total}}"
+    "name": "اللقب",
+    "code": "الرمز",
+    "description": "الوصف",
+    "status": "الحالة",
+    "actions": "إجراءات",
+    "searchPlaceholder": "البحث في الألقاب...",
+    "showing": "عرض {{from}}-{{to}} من {{total}}",
+    "page": "صفحة {{current}} من {{total}}",
+    "rowsPerPage": "الصفوف لكل صفحة"
   },
   "form": {
-    "addTitle": "Add New Title",
-    "editTitle": "Edit Title",
-    "addDescription": "Enter new title details",
-    "editDescription": "Edit title details",
-    "titleName": "Title Name",
-    "titleNamePlaceholder": "Enter title name",
-    "titleCode": "Title Code",
-    "codePlaceholder": "Enter code (optional)",
-    "cancel": "Cancel",
-    "save": "Save",
-    "saving": "Saving..."
-  },
-  "delete": {
-    "confirmTitle": "Delete Title",
-    "confirmMessage": "Are you sure you want to delete the title {{name}}?",
-    "button": "Delete"
+    "addTitle": "إضافة لقب جديد",
+    "editTitle": "تعديل اللقب",
+    "name": "اللقب",
+    "code": "الرمز",
+    "description": "الوصف",
+    "status": "الحالة",
+    "active": "نشط",
+    "passive": "غير نشط",
+    "cancel": "إلغاء",
+    "save": "حفظ",
+    "required": "مطلوب",
+    "successAdd": "تم إضافة اللقب بنجاح",
+    "successUpdate": "تم تحديث اللقب بنجاح"
   }
 }
