--- a/src/locales/ar/activity-management.json
+++ b/src/locales/ar/activity-management.json
@@ -1,140 +1,140 @@
 {
-  "title": "Activity Management",
-  "description": "Manage and edit activities",
-  "create": "New Activity",
-  "createDescription": "Enter new activity information",
-  "edit": "Edit Activity",
-  "editButton": "Edit",
-  "editDescription": "Edit activity information",
-  "delete": "Delete",
-  "deleteTitle": "Delete Activity",
-  "subject": "Subject",
-  "activityType": "Activity Type",
-  "potentialCustomerId": "Potential Customer",
-  "potentialCustomer": "Customer",
-  "customer": "Customer",
-  "selectCustomer": "Select Customer",
-  "erpCustomerCode": "ERP Customer Code",
-  "product": "Stock/Product",
-  "selectProduct": "Select Stock/Product",
-  "status": "Status",
-  "isCompleted": "Completed",
-  "priority": "Priority",
-  "contactId": "Contact",
-  "contact": "Contact",
-  "assignedUserId": "Assigned User",
-  "assignedUser": "Assigned To",
-  "activityDate": "Activity Date",
-  "activityDateRequired": "Activity date is required",
-  "createdDate": "Created Date",
-  "updatedDate": "Updated Date",
-  "actions": "Actions",
-  "search": "Search",
-  "filterByActivityType": "Filter by Activity Type",
-  "filterByStatus": "Filter by Status",
-  "filterByPriority": "Filter by Priority",
-  "filterByPotentialCustomer": "Filter by Customer",
-  "filterByContact": "Filter by Contact",
-  "filterByAssignedUser": "Filter by Assigned User",
-  "filterByIsCompleted": "Filter by Completion Status",
-  "filterByCreatedDateRange": "Filter by Created Date Range",
-  "noData": "No data found",
-  "confirmDelete": "Are you sure you want to delete this activity?",
-  "createSuccess": "Activity created successfully",
-  "updateSuccess": "Activity updated successfully",
-  "deleteSuccess": "Activity deleted successfully",
-  "createError": "An error occurred while creating activity",
-  "updateError": "An error occurred while updating activity",
-  "deleteError": "An error occurred while deleting activity",
-  "subjectRequired": "Subject is required",
-  "subjectMaxLength": "Subject must be at most 100 characters",
-  "descriptionMaxLength": "Description must be at most 500 characters",
-  "activityTypeRequired": "Activity type selection is required",
-  "activityTypeMaxLength": "Activity type must be at most 50 characters",
-  "statusRequired": "Status selection is required",
-  "statusMaxLength": "Status must be at most 50 characters",
-  "priorityMaxLength": "Priority must be at most 50 characters",
-  "enterSubject": "Enter Subject",
-  "enterDescription": "Enter Description (Optional)",
-  "selectActivityType": "Select Activity Type",
-  "selectPotentialCustomer": "Select Potential Customer (Optional)",
-  "enterErpCustomerCode": "Enter ERP Customer Code (Optional)",
-  "selectStatus": "Select Status",
-  "selectPriority": "Select Priority (Optional)",
-  "selectContact": "Select Contact (Optional)",
-  "selectAssignedUser": "Select Assigned User (Optional)",
-  "noCustomerSelected": "No customer selected",
-  "noContactSelected": "No contact selected",
-  "noUserSelected": "No user selected",
-  "noPrioritySelected": "No priority selected",
-  "selectCustomerFirst": "Select customer first",
-  "loading": "Loading...",
-  "save": "Save",
-  "saving": "Saving...",
-  "cancel": "Cancel",
-  "previous": "Previous",
-  "next": "Next",
+  "title": "إدارة الأنشطة",
+  "description": "إدارة وتعديل الأنشطة",
+  "create": "نشاط جديد",
+  "createDescription": "أدخل معلومات النشاط الجديد",
+  "edit": "تعديل النشاط",
+  "editButton": "تعديل",
+  "editDescription": "تعديل معلومات النشاط",
+  "delete": "حذف",
+  "deleteTitle": "حذف النشاط",
+  "subject": "الموضوع",
+  "activityType": "نوع النشاط",
+  "potentialCustomerId": "عميل محتمل",
+  "potentialCustomer": "العميل",
+  "customer": "العميل",
+  "selectCustomer": "اختر العميل",
+  "erpCustomerCode": "رمز عميل ERP",
+  "product": "المخزون/المنتج",
+  "selectProduct": "اختر المخزون/المنتج",
+  "status": "الحالة",
+  "isCompleted": "مكتمل",
+  "priority": "الأولوية",
+  "contactId": "جهة الاتصال",
+  "contact": "جهة الاتصال",
+  "assignedUserId": "المستخدم المعين",
+  "assignedUser": "معين لـ",
+  "activityDate": "تاريخ النشاط",
+  "activityDateRequired": "تاريخ النشاط مطلوب",
+  "createdDate": "تاريخ الإنشاء",
+  "updatedDate": "تاريخ التحديث",
+  "actions": "إجراءات",
+  "search": "بحث",
+  "filterByActivityType": "تصفية حسب نوع النشاط",
+  "filterByStatus": "تصفية حسب الحالة",
+  "filterByPriority": "تصفية حسب الأولوية",
+  "filterByPotentialCustomer": "تصفية حسب العميل",
+  "filterByContact": "تصفية حسب جهة الاتصال",
+  "filterByAssignedUser": "تصفية حسب المستخدم المعين",
+  "filterByIsCompleted": "تصفية حسب حالة الإكمال",
+  "filterByCreatedDateRange": "تصفية حسب نطاق تاريخ الإنشاء",
+  "noData": "لم يتم العثور على بيانات",
+  "confirmDelete": "هل أنت متأكد أنك تريد حذف هذا النشاط؟",
+  "createSuccess": "تم إنشاء النشاط بنجاح",
+  "updateSuccess": "تم تحديث النشاط بنجاح",
+  "deleteSuccess": "تم حذف النشاط بنجاح",
+  "createError": "حدث خطأ أثناء إنشاء النشاط",
+  "updateError": "حدث خطأ أثناء تحديث النشاط",
+  "deleteError": "حدث خطأ أثناء حذف النشاط",
+  "subjectRequired": "الموضوع مطلوب",
+  "subjectMaxLength": "يجب أن يكون الموضوع بحد أقصى 100 حرفًا",
+  "descriptionMaxLength": "يجب أن يكون الوصف بحد أقصى 500 حرفًا",
+  "activityTypeRequired": "اختيار نوع النشاط مطلوب",
+  "activityTypeMaxLength": "يجب أن يكون نوع النشاط بحد أقصى 50 حرفًا",
+  "statusRequired": "اختيار الحالة مطلوب",
+  "statusMaxLength": "يجب أن تكون الحالة بحد أقصى 50 حرفًا",
+  "priorityMaxLength": "يجب أن تكون الأولوية بحد أقصى 50 حرفًا",
+  "enterSubject": "أدخل الموضوع",
+  "enterDescription": "أدخل الوصف (اختياري)",
+  "selectActivityType": "اختر نوع النشاط",
+  "selectPotentialCustomer": "اختر عميل محتمل (اختياري)",
+  "enterErpCustomerCode": "أدخل رمز عميل ERP (اختياري)",
+  "selectStatus": "اختر الحالة",
+  "selectPriority": "اختر الأولوية (اختياري)",
+  "selectContact": "اختر جهة اتصال (اختياري)",
+  "selectAssignedUser": "اختر مستخدم معين (اختياري)",
+  "noCustomerSelected": "لم يتم اختيار عميل",
+  "noContactSelected": "لم يتم اختيار جهة اتصال",
+  "noUserSelected": "لم يتم اختيار مستخدم",
+  "noPrioritySelected": "لم يتم اختيار أولوية",
+  "selectCustomerFirst": "اختر العميل أولاً",
+  "loading": "جاري التحميل...",
+  "save": "حفظ",
+  "saving": "جاري الحفظ...",
+  "cancel": "إلغاء",
+  "previous": "السابق",
+  "next": "التالي",
   "productDisplay": "{{code}} - {{name}}",
   "erpLabel": "ERP: {{code}}",
-  "close": "Close",
-  "clearFilters": "Clear Filters",
-  "applyFilters": "Apply Filters",
-  "markAsCompleted": "Mark as Completed",
-  "markAsInProgress": "Mark as In Progress",
-  "cancelActivity": "Cancel",
-  "confirmMarkAsCompleted": "Are you sure you want to mark this activity as completed?",
-  "confirmMarkAsInProgress": "Are you sure you want to mark this activity as in progress?",
-  "confirmCancel": "Are you sure you want to cancel this activity?",
-  "markAsCompletedSuccess": "Activity marked as completed",
-  "markAsInProgressSuccess": "Activity marked as in progress",
-  "cancelSuccess": "Activity canceled",
-  "statusChangeWarning": "Are you sure you want to change the status?",
-  "autoCompleteStatus": "Will be automatically marked when status is set to 'Completed'",
-  "activityTypeCall": "Call",
-  "activityTypeMeeting": "Meeting",
-  "activityTypeEmail": "Email",
-  "activityTypeTask": "Task",
-  "activityTypeNote": "Note",
-  "activityTypeEvent": "Event",
-  "statusScheduled": "Scheduled",
-  "statusInProgress": "In Progress",
-  "statusCompleted": "Completed",
-  "statusCanceled": "Canceled",
-  "statusPostponed": "Postponed",
-  "priorityLow": "Low",
-  "priorityMedium": "Medium",
-  "priorityHigh": "High",
-  "allActivityTypes": "All Activity Types",
-  "allStatuses": "All Statuses",
-  "allPriorities": "All Priorities",
-  "completedActivities": "Completed Activities",
-  "pendingActivities": "Pending Activities",
-  "highPriorityActivities": "High Priority Activities",
-  "noCompletedActivities": "No completed activities found",
-  "noPendingActivities": "No pending activities found",
-  "activityDetails": "Activity Details",
-  "customerInformation": "Customer Information",
-  "contactInformation": "Contact Information",
-  "assignedUserInformation": "Assigned User Information",
-  "calendarView": "Calendar View",
-  "kanbanView": "Kanban View",
-  "tableView": "Table View",
-  "switchToCalendar": "Switch to Calendar View",
-  "switchToKanban": "Switch to Kanban View",
-  "switchToTable": "Switch to Table View",
+  "close": "إغلاق",
+  "clearFilters": "مسح المرشحات",
+  "applyFilters": "تطبيق المرشحات",
+  "markAsCompleted": "تحديد كمكتمل",
+  "markAsInProgress": "تحديد كقيد التنفيذ",
+  "cancelActivity": "إلغاء",
+  "confirmMarkAsCompleted": "هل أنت متأكد أنك تريد تحديد هذا النشاط كمكتمل؟",
+  "confirmMarkAsInProgress": "هل أنت متأكد أنك تريد تحديد هذا النشاط كقيد التنفيذ؟",
+  "confirmCancel": "هل أنت متأكد أنك تريد إلغاء هذا النشاط؟",
+  "markAsCompletedSuccess": "تم تحديد النشاط كمكتمل",
+  "markAsInProgressSuccess": "تم تحديد النشاط كقيد التنفيذ",
+  "cancelSuccess": "تم إلغاء النشاط",
+  "statusChangeWarning": "هل أنت متأكد أنك تريد تغيير الحالة؟",
+  "autoCompleteStatus": "سيتم التحديد تلقائيًا عندما يتم تعيين الحالة إلى 'مكتمل'",
+  "activityTypeCall": "مكالمة",
+  "activityTypeMeeting": "اجتماع",
+  "activityTypeEmail": "بريد إلكتروني",
+  "activityTypeTask": "مهمة",
+  "activityTypeNote": "ملاحظة",
+  "activityTypeEvent": "حدث",
+  "statusScheduled": "مجدول",
+  "statusInProgress": "قيد التنفيذ",
+  "statusCompleted": "مكتمل",
+  "statusCanceled": "ملغى",
+  "statusPostponed": "مؤجل",
+  "priorityLow": "منخفضة",
+  "priorityMedium": "متوسطة",
+  "priorityHigh": "عالية",
+  "allActivityTypes": "جميع أنواع الأنشطة",
+  "allStatuses": "جميع الحالات",
+  "allPriorities": "جميع الأولويات",
+  "completedActivities": "الأنشطة المكتملة",
+  "pendingActivities": "الأنشطة المعلقة",
+  "highPriorityActivities": "الأنشطة ذات الأولوية العالية",
+  "noCompletedActivities": "لم يتم العثور على أنشطة مكتملة",
+  "noPendingActivities": "لم يتم العثور على أنشطة معلقة",
+  "activityDetails": "تفاصيل النشاط",
+  "customerInformation": "معلومات العميل",
+  "contactInformation": "معلومات جهة الاتصال",
+  "assignedUserInformation": "معلومات المستخدم المعين",
+  "calendarView": "عرض التقويم",
+  "kanbanView": "عرض كانبان",
+  "tableView": "عرض الجدول",
+  "switchToCalendar": "التبديل إلى عرض التقويم",
+  "switchToKanban": "التبديل إلى عرض كانبان",
+  "switchToTable": "التبديل إلى عرض الجدول",
   "table": {
-    "id": "ID",
-    "subject": "Subject",
-    "activityType": "Activity Type",
-    "status": "Status",
-    "priority": "Priority",
-    "potentialCustomer": "Customer",
-    "contact": "Contact",
-    "assignedUser": "Assigned To",
-    "isCompleted": "Completed",
-    "createdDate": "Created Date",
-    "updatedDate": "Updated Date",
-    "showing": "Showing {{from}}-{{to}} of {{total}}",
-    "page": "Page {{current}} of {{total}}"
+    "id": "المعرف",
+    "subject": "الموضوع",
+    "activityType": "نوع النشاط",
+    "status": "الحالة",
+    "priority": "الأولوية",
+    "potentialCustomer": "العميل",
+    "contact": "جهة الاتصال",
+    "assignedUser": "معين لـ",
+    "isCompleted": "مكتمل",
+    "createdDate": "تاريخ الإنشاء",
+    "updatedDate": "تاريخ التحديث",
+    "showing": "عرض {{from}}-{{to}} من {{total}}",
+    "page": "صفحة {{current}} من {{total}}"
   }
 }
