--- a/src/locales/ar/approval-role-group-management.json
+++ b/src/locales/ar/approval-role-group-management.json
@@ -1,36 +1,36 @@
 {
-  "menu": "Approval Role Group Management",
-  "description": "Manage and organize approval role groups",
-  "addButton": "Add New Group",
-  "refresh": "Refresh",
-  "searchPlaceholder": "Search...",
-  "loading": "Loading...",
-  "noData": "No data found",
-  "noDataDescription": "No records found matching your search criteria or no records added yet.",
+  "menu": "إدارة مجموعات أدوار الموافقة",
+  "description": "إدارة وتنظيم مجموعات أدوار الموافقة",
+  "addButton": "إضافة مجموعة جديدة",
+  "refresh": "تحديث",
+  "searchPlaceholder": "بحث...",
+  "loading": "جاري التحميل...",
+  "noData": "لم يتم العثور على بيانات",
+  "noDataDescription": "لم يتم العثور على سجلات تطابق بحثك أو لم تتم إضافة سجلات بعد.",
   "table": {
-    "id": "ID",
-    "name": "Group Name",
-    "createdDate": "Created Date",
-    "createdBy": "Created By",
-    "actions": "Actions",
-    "showing": "Showing {{from}}-{{to}} of {{total}} records"
+    "id": "المعرف",
+    "name": "اسم المجموعة",
+    "createdDate": "تاريخ الإنشاء",
+    "createdBy": "تم الإنشاء بواسطة",
+    "actions": "إجراءات",
+    "showing": "عرض {{from}}-{{to}} من {{total}} سجلات"
   },
   "delete": {
-    "confirmTitle": "Delete Confirmation",
-    "confirmMessage": "This action cannot be undone. Do you want to continue?"
+    "confirmTitle": "تأكيد الحذف",
+    "confirmMessage": "لا يمكن التراجع عن هذا الإجراء. هل تريد المتابعة؟"
   },
-  "cancel": "Cancel",
-  "save": "Save",
-  "saving": "Saving...",
-  "deleteButton": "Delete",
+  "cancel": "إلغاء",
+  "save": "حفظ",
+  "saving": "جاري الحفظ...",
+  "deleteButton": "حذف",
   "form": {
-    "editTitle": "Edit Approval Role Group",
-    "addTitle": "Add New Approval Role Group",
-    "editDescription": "Edit approval role group information",
-    "addDescription": "Enter new approval role group information",
-    "name": "Group Name",
-    "namePlaceholder": "Enter group name",
-    "nameRequired": "Group name is required",
-    "nameMaxLength": "Group name can be at most 100 characters"
+    "editTitle": "تعديل مجموعة الأدوار",
+    "addTitle": "إضافة مجموعة أدوار جديدة",
+    "editDescription": "تعديل معلومات مجموعة الأدوار",
+    "addDescription": "إدخال معلومات مجموعة الأدوار الجديدة",
+    "name": "اسم المجموعة",
+    "namePlaceholder": "أدخل اسم المجموعة",
+    "nameRequired": "اسم المجموعة مطلوب",
+    "nameMaxLength": "الاسم يمكن أن يكون بحد أقصى 100 حرف"
   }
 }
