--- a/src/locales/ar/contact-management.json
+++ b/src/locales/ar/contact-management.json
@@ -1,77 +1,77 @@
 {
-  "menu": "Customer Contact Management",
-  "description": "Manage and edit customer contacts",
-  "addButton": "Add New Contact",
+  "menu": "إدارة جهات اتصال العملاء",
+  "description": "إدارة وتحرير جهات اتصال العملاء",
+  "addButton": "إضافة جهة اتصال جديدة",
   "stats": {
-    "totalContacts": "Total Contacts",
-    "activeContacts": "Active Contacts",
-    "newThisMonth": "New This Month"
+    "totalContacts": "إجمالي جهات الاتصال",
+    "activeContacts": "جهات الاتصال النشطة",
+    "newThisMonth": "جديد هذا الشهر"
   },
   "table": {
-    "id": "ID",
-    "fullName": "Full Name",
-    "email": "Email",
-    "phone": "Phone",
-    "mobile": "Mobile",
-    "notes": "Notes",
-    "customer": "Customer",
-    "title": "Title",
-    "createdDate": "Created Date",
-    "createdBy": "Created By",
-    "updatedDate": "Updated Date",
-    "updatedBy": "Updated By",
-    "showing": "Showing {{from}}-{{to}} / {{total}}",
-    "page": "Page {{current}} / {{total}}"
+    "id": "المعرف",
+    "fullName": "الاسم الكامل",
+    "email": "البريد الإلكتروني",
+    "phone": "الهاتف",
+    "mobile": "الجوال",
+    "notes": "ملاحظات",
+    "customer": "العميل",
+    "title": "اللقب",
+    "createdDate": "تاريخ الإنشاء",
+    "createdBy": "تم الإنشاء بواسطة",
+    "updatedDate": "تاريخ التحديث",
+    "updatedBy": "تم التحديث بواسطة",
+    "showing": "عرض {{from}}-{{to}} / {{total}}",
+    "page": "صفحة {{current}} / {{total}}"
   },
   "form": {
-    "addContact": "Add New Contact",
-    "editContact": "Edit Contact",
-    "addDescription": "Enter new contact information",
-    "editDescription": "Edit contact information",
-    "fullName": "Full Name",
-    "fullNamePlaceholder": "Enter full name",
-    "fullNameRequired": "Full name is required",
-    "fullNameMaxLength": "Full name must be at most 100 characters",
-    "email": "Email",
-    "emailPlaceholder": "Enter email address (optional)",
-    "emailInvalid": "Please enter a valid email address",
-    "emailMaxLength": "Email must be at most 100 characters",
-    "phone": "Phone",
-    "phonePlaceholder": "Enter phone number (optional)",
-    "phoneMaxLength": "Phone must be at most 20 characters",
-    "mobile": "Mobile",
-    "mobilePlaceholder": "Enter mobile phone number (optional)",
-    "mobileMaxLength": "Mobile must be at most 20 characters",
-    "notes": "Notes",
-    "notesPlaceholder": "Enter notes (optional)",
-    "notesMaxLength": "Notes must be at most 250 characters",
-    "customer": "Customer",
-    "selectCustomer": "Select customer",
-    "customerRequired": "Customer selection is required",
-    "title": "Title",
-    "selectTitle": "Select title",
-    "titleRequired": "Title selection is required"
+    "addContact": "إضافة جهة اتصال جديدة",
+    "editContact": "تحرير جهة الاتصال",
+    "addDescription": "أدخل معلومات جهة الاتصال الجديدة",
+    "editDescription": "تحرير معلومات جهة الاتصال",
+    "fullName": "الاسم الكامل",
+    "fullNamePlaceholder": "أدخل الاسم الكامل",
+    "fullNameRequired": "الاسم الكامل مطلوب",
+    "fullNameMaxLength": "يجب أن يكون الاسم الكامل 100 حرف كحد أقصى",
+    "email": "البريد الإلكتروني",
+    "emailPlaceholder": "أدخل عنوان البريد الإلكتروني (اختياري)",
+    "emailInvalid": "الرجاء إدخال عنوان بريد إلكتروني صالح",
+    "emailMaxLength": "يجب أن يكون البريد الإلكتروني 100 حرف كحد أقصى",
+    "phone": "الهاتف",
+    "phonePlaceholder": "أدخل رقم الهاتف (اختياري)",
+    "phoneMaxLength": "يجب أن يكون الهاتف 20 حرفًا كحد أقصى",
+    "mobile": "الجوال",
+    "mobilePlaceholder": "أدخل رقم الجوال (اختياري)",
+    "mobileMaxLength": "يجب أن يكون الجوال 20 حرفًا كحد أقصى",
+    "notes": "ملاحظات",
+    "notesPlaceholder": "أدخل ملاحظات (اختياري)",
+    "notesMaxLength": "يجب أن تكون الملاحظات 250 حرفًا كحد أقصى",
+    "customer": "العميل",
+    "selectCustomer": "اختر العميل",
+    "customerRequired": "اختيار العميل مطلوب",
+    "title": "اللقب",
+    "selectTitle": "اختر اللقب",
+    "titleRequired": "اختيار اللقب مطلوب"
   },
   "delete": {
-    "action": "Delete",
-    "confirmTitle": "Delete Contact",
-    "confirmMessage": "Are you sure you want to delete {{name}} contact?"
+    "action": "حذف",
+    "confirmTitle": "حذف جهة الاتصال",
+    "confirmMessage": "هل أنت متأكد أنك تريد حذف جهة الاتصال {{name}}؟"
   },
-  "loading": "Loading...",
-  "noData": "No data",
-  "actions": "Actions",
-  "edit": "Edit",
-  "previous": "Previous",
-  "next": "Next",
-  "cancel": "Cancel",
-  "save": "Save",
-  "saving": "Saving...",
+  "loading": "جاري التحميل...",
+  "noData": "لا توجد بيانات",
+  "actions": "إجراءات",
+  "edit": "تحرير",
+  "previous": "السابق",
+  "next": "التالي",
+  "cancel": "إلغاء",
+  "save": "حفظ",
+  "saving": "جاري الحفظ...",
   "messages": {
-    "createSuccess": "Contact created successfully",
-    "createError": "Contact could not be created",
-    "updateSuccess": "Contact updated successfully",
-    "updateError": "Contact could not be updated",
-    "deleteSuccess": "Contact deleted successfully",
-    "deleteError": "Contact could not be deleted"
+    "createSuccess": "تم إنشاء جهة الاتصال بنجاح",
+    "createError": "تعذر إنشاء جهة الاتصال",
+    "updateSuccess": "تم تحديث جهة الاتصال بنجاح",
+    "updateError": "تعذر تحديث جهة الاتصال",
+    "deleteSuccess": "تم حذف جهة الاتصال بنجاح",
+    "deleteError": "تعذر حذف جهة الاتصال"
   }
 }
