--- a/src/locales/ar/customer-management.json
+++ b/src/locales/ar/customer-management.json
@@ -1,105 +1,105 @@
 {
-  "menu": "Customer Management",
-  "description": "Manage and edit customers",
-  "addButton": "Add New Customer",
+  "menu": "إدارة العملاء",
+  "description": "إدارة وتحرير العملاء",
+  "addButton": "إضافة عميل جديد",
   "stats": {
-    "totalCustomers": "Total Customers",
-    "approvedCustomers": "Approved Customers",
-    "newThisMonth": "New This Month"
+    "totalCustomers": "إجمالي العملاء",
+    "approvedCustomers": "العملاء المعتمدون",
+    "newThisMonth": "جديد هذا الشهر"
   },
   "table": {
-    "id": "ID",
-    "customerCode": "Customer Code",
-    "name": "Customer Name",
-    "customerType": "Customer Type",
-    "tcknNumber": "TCKN Number",
-    "country": "Country",
-    "city": "City",
-    "district": "District",
-    "phone": "Phone",
-    "email": "Email",
-    "isApproved": "Approved",
-    "createdDate": "Created Date",
-    "createdBy": "Created By",
-    "showing": "Showing {{from}}-{{to}} / {{total}}",
-    "page": "Page {{current}} / {{total}}"
+    "id": "المعرف",
+    "customerCode": "رمز العميل",
+    "name": "اسم العميل",
+    "customerType": "نوع العميل",
+    "tcknNumber": "رقم TCKN",
+    "country": "البلد",
+    "city": "المدينة",
+    "district": "المنطقة",
+    "phone": "الهاتف",
+    "email": "البريد الإلكتروني",
+    "isApproved": "معتمد",
+    "createdDate": "تاريخ الإنشاء",
+    "createdBy": "تم الإنشاء بواسطة",
+    "showing": "عرض {{from}}-{{to}} / {{total}}",
+    "page": "صفحة {{current}} / {{total}}"
   },
   "form": {
-    "addCustomer": "Add New Customer",
-    "editCustomer": "Edit Customer",
-    "addDescription": "Enter new customer information",
-    "editDescription": "Edit customer information",
-    "customerCode": "Customer Code",
-    "customerCodePlaceholder": "Enter customer code (optional)",
-    "customerCodeMaxLength": "Customer code must be at most 100 characters",
-    "name": "Customer Name",
-    "namePlaceholder": "Enter customer name",
-    "nameRequired": "Customer name is required",
-    "nameMaxLength": "Customer name must be at most 250 characters",
-    "taxNumber": "Tax Number",
-    "taxNumberPlaceholder": "Enter tax number (optional)",
-    "taxNumberMaxLength": "Tax number must be at most 15 characters",
-    "taxOffice": "Tax Office",
-    "taxOfficePlaceholder": "Enter tax office (optional)",
-    "taxOfficeMaxLength": "Tax office must be at most 100 characters",
-    "tcknNumber": "TCKN Number",
-    "tcknNumberPlaceholder": "Enter TCKN number (optional)",
-    "tcknNumberMaxLength": "TCKN number must be at most 20 characters",
-    "address": "Address",
-    "addressPlaceholder": "Enter address (optional)",
-    "addressMaxLength": "Address must be at most 500 characters",
-    "phone": "Phone",
-    "phonePlaceholder": "Enter phone number (optional)",
-    "phoneMaxLength": "Phone number must be at most 100 characters",
-    "email": "Email",
-    "emailPlaceholder": "Enter email address (optional)",
-    "emailInvalid": "Please enter a valid email address",
-    "emailMaxLength": "Email address must be at most 100 characters",
-    "website": "Website",
-    "websitePlaceholder": "Enter website address (optional)",
-    "websiteMaxLength": "Website address must be at most 100 characters",
-    "notes": "Notes",
-    "notesPlaceholder": "Enter notes (optional)",
-    "notesMaxLength": "Notes must be at most 250 characters",
-    "country": "Country",
-    "selectCountry": "Select country",
-    "countryRequired": "Country selection is required",
-    "city": "City",
-    "selectCity": "Select city",
-    "cityRequired": "City selection is required",
-    "district": "District",
-    "selectDistrict": "Select district",
-    "districtRequired": "District selection is required",
-    "customerType": "Customer Type",
-    "selectCustomerType": "Select customer type",
-    "customerTypeRequired": "Customer type selection is required",
-    "erpCode": "ERP Code",
-    "erpCodePlaceholder": "Enter ERP code (optional)",
-    "erpCodeMaxLength": "ERP code must be at most 20 characters",
-    "isApproved": "Approved",
-    "isCompleted": "Completed",
-    "isERPIntegrated": "ERP Integrated"
+    "addCustomer": "إضافة عميل جديد",
+    "editCustomer": "تحرير العميل",
+    "addDescription": "أدخل معلومات العميل الجديد",
+    "editDescription": "تحرير معلومات العميل",
+    "customerCode": "رمز العميل",
+    "customerCodePlaceholder": "أدخل رمز العميل (اختياري)",
+    "customerCodeMaxLength": "يجب أن يكون رمز العميل 100 حرف كحد أقصى",
+    "name": "اسم العميل",
+    "namePlaceholder": "أدخل اسم العميل",
+    "nameRequired": "اسم العميل مطلوب",
+    "nameMaxLength": "يجب أن يكون اسم العميل 250 حرفًا كحد أقصى",
+    "taxNumber": "الرقم الضريبي",
+    "taxNumberPlaceholder": "أدخل الرقم الضريبي (اختياري)",
+    "taxNumberMaxLength": "يجب أن يكون الرقم الضريبي 15 حرفًا كحد أقصى",
+    "taxOffice": "مكتب الضرائب",
+    "taxOfficePlaceholder": "أدخل مكتب الضرائب (اختياري)",
+    "taxOfficeMaxLength": "يجب أن يكون مكتب الضرائب 100 حرف كحد أقصى",
+    "tcknNumber": "رقم TCKN",
+    "tcknNumberPlaceholder": "أدخل رقم TCKN (اختياري)",
+    "tcknNumberMaxLength": "يجب أن يكون رقم TCKN 20 حرفًا كحد أقصى",
+    "address": "العنوان",
+    "addressPlaceholder": "أدخل العنوان (اختياري)",
+    "addressMaxLength": "يجب أن يكون العنوان 500 حرف كحد أقصى",
+    "phone": "الهاتف",
+    "phonePlaceholder": "أدخل رقم الهاتف (اختياري)",
+    "phoneMaxLength": "يجب أن يكون رقم الهاتف 100 حرف كحد أقصى",
+    "email": "البريد الإلكتروني",
+    "emailPlaceholder": "أدخل عنوان البريد الإلكتروني (اختياري)",
+    "emailInvalid": "الرجاء إدخال عنوان بريد إلكتروني صالح",
+    "emailMaxLength": "يجب أن يكون عنوان البريد الإلكتروني 100 حرف كحد أقصى",
+    "website": "الموقع الإلكتروني",
+    "websitePlaceholder": "أدخل عنوان الموقع الإلكتروني (اختياري)",
+    "websiteMaxLength": "يجب أن يكون عنوان الموقع الإلكتروني 100 حرف كحد أقصى",
+    "notes": "ملاحظات",
+    "notesPlaceholder": "أدخل ملاحظات (اختياري)",
+    "notesMaxLength": "يجب أن تكون الملاحظات 250 حرفًا كحد أقصى",
+    "country": "البلد",
+    "selectCountry": "اختر البلد",
+    "countryRequired": "اختيار البلد مطلوب",
+    "city": "المدينة",
+    "selectCity": "اختر المدينة",
+    "cityRequired": "اختيار المدينة مطلوب",
+    "district": "المنطقة",
+    "selectDistrict": "اختر المنطقة",
+    "districtRequired": "اختيار المنطقة مطلوب",
+    "customerType": "نوع العميل",
+    "selectCustomerType": "اختر نوع العميل",
+    "customerTypeRequired": "اختيار نوع العميل مطلوب",
+    "erpCode": "رمز ERP",
+    "erpCodePlaceholder": "أدخل رمز ERP (اختياري)",
+    "erpCodeMaxLength": "يجب أن يكون رمز ERP 20 حرفًا كحد أقصى",
+    "isApproved": "معتمد",
+    "isCompleted": "مكتمل",
+    "isERPIntegrated": "متكامل مع ERP"
   },
   "delete": {
-    "action": "Delete",
-    "confirmTitle": "Delete Customer",
-    "confirmMessage": "Are you sure you want to delete {{name}} customer?"
+    "action": "حذف",
+    "confirmTitle": "حذف العميل",
+    "confirmMessage": "هل أنت متأكد أنك تريد حذف العميل {{name}}؟"
   },
-  "loading": "Loading...",
-  "noData": "No data",
-  "actions": "Actions",
-  "edit": "Edit",
-  "previous": "Previous",
-  "next": "Next",
-  "cancel": "Cancel",
-  "save": "Save",
-  "saving": "Saving...",
+  "loading": "جاري التحميل...",
+  "noData": "لا توجد بيانات",
+  "actions": "إجراءات",
+  "edit": "تحرير",
+  "previous": "السابق",
+  "next": "التالي",
+  "cancel": "إلغاء",
+  "save": "حفظ",
+  "saving": "جاري الحفظ...",
   "messages": {
-    "createSuccess": "Customer created successfully",
-    "createError": "Customer could not be created",
-    "updateSuccess": "Customer updated successfully",
-    "updateError": "Customer could not be updated",
-    "deleteSuccess": "Customer deleted successfully",
-    "deleteError": "Customer could not be deleted"
+    "createSuccess": "تم إنشاء العميل بنجاح",
+    "createError": "تعذر إنشاء العميل",
+    "updateSuccess": "تم تحديث العميل بنجاح",
+    "updateError": "تعذر تحديث العميل",
+    "deleteSuccess": "تم حذف العميل بنجاح",
+    "deleteError": "تعذر حذف العميل"
   }
 }
