--- a/src/locales/ar/customer-select-dialog.json
+++ b/src/locales/ar/customer-select-dialog.json
@@ -1,24 +1,24 @@
 {
-  "title": "Select Customer",
-  "description": "Select a tab and choose a customer from the list",
-  "erpCustomers": "ERP Customer",
-  "crmCustomers": "CRM Customers",
-  "allCustomers": "All",
+  "title": "اختر العميل",
+  "description": "اختر علامة تبويب واختر عميلاً من القائمة",
+  "erpCustomers": "عملاء ERP",
+  "crmCustomers": "عملاء CRM",
+  "allCustomers": "الكل",
   "erp": "ERP",
   "crm": "CRM",
-  "noErpCustomers": "No ERP customers found",
-  "noCrmCustomers": "No CRM customers found",
-  "noCustomers": "No customers found",
-  "noResults": "No search results found",
-  "searchPlaceholder": "Search by name or code...",
-  "voiceSearch": "Voice search",
-  "loading": "Loading",
+  "noErpCustomers": "لم يتم العثور على عملاء ERP",
+  "noCrmCustomers": "لم يتم العثور على عملاء CRM",
+  "noCustomers": "لم يتم العثور على عملاء",
+  "noResults": "لم يتم العثور على نتائج بحث",
+  "searchPlaceholder": "البحث بالاسم أو الرمز...",
+  "voiceSearch": "البحث الصوتي",
+  "loading": "جاري التحميل",
   "table": {
-    "type": "Type",
-    "customerCode": "Customer Code",
-    "customerName": "Customer Name",
-    "phone": "Phone",
-    "city": "City",
-    "email": "Email"
+    "type": "النوع",
+    "customerCode": "رمز العميل",
+    "customerName": "اسم العميل",
+    "phone": "الهاتف",
+    "city": "المدينة",
+    "email": "البريد الإلكتروني"
   }
 }
