--- a/src/locales/ar/payment-type-management.json
+++ b/src/locales/ar/payment-type-management.json
@@ -1,51 +1,29 @@
 {
-  "title": "Payment Type Management",
-  "headerDescription": "Manage and edit payment types",
-  "create": "New Payment Type",
-  "edit": "Edit Payment Type",
-  "editDescription": "Edit payment type information",
-  "createDescription": "Enter new payment type information",
-  "delete": "Delete",
-  "deleteTitle": "Delete Payment Type",
-  "name": "Name",
-  "namePlaceholder": "Enter payment type name",
-  "description": "Description",
-  "descriptionPlaceholder": "Enter description (optional)",
-  "createdDate": "Created Date",
-  "updatedDate": "Updated Date",
-  "actions": "Actions",
-  "search": "Search",
-  "refresh": "Refresh",
-  "loading": "Loading...",
-  "previous": "Previous",
-  "next": "Next",
-  "cancel": "Cancel",
-  "save": "Save",
-  "saving": "Saving...",
-  "noData": "No data found",
-  "confirmDelete": "Are you sure you want to delete this payment type?",
-  "createSuccess": "Payment type created successfully",
-  "updateSuccess": "Payment type updated successfully",
-  "deleteSuccess": "Payment type deleted successfully",
-  "createError": "An error occurred while creating payment type",
-  "updateError": "An error occurred while updating payment type",
-  "deleteError": "An error occurred while deleting payment type",
+  "title": "إدارة أنواع الدفع",
+  "description": "إعداد وإدارة طرق الدفع",
+  "create": "نوع دفع جديد",
+  "edit": "تعديل نوع الدفع",
+  "delete": "حذف",
   "table": {
-    "id": "ID",
-    "name": "Name",
-    "description": "Description",
-    "createdDate": "Created Date",
-    "updatedDate": "Updated Date",
-    "showing": "Showing {{from}}-{{to}} of {{total}}",
-    "page": "Page {{current}} of {{total}}"
+    "id": "المعرف",
+    "name": "الاسم",
+    "code": "الرمز",
+    "description": "الوصف",
+    "isActive": "نشط",
+    "actions": "إجراءات"
   },
   "form": {
-    "name": {
-      "required": "Name is required",
-      "maxLength": "Name can be at most 100 characters"
-    },
-    "description": {
-      "maxLength": "Description can be at most 500 characters"
-    }
+    "name": "الاسم",
+    "code": "الرمز",
+    "description": "الوصف",
+    "isActive": "نشط",
+    "nameRequired": "الاسم مطلوب",
+    "codeRequired": "الرمز مطلوب"
+  },
+  "messages": {
+    "createSuccess": "تم إنشاء نوع الدفع بنجاح",
+    "updateSuccess": "تم تحديث نوع الدفع بنجاح",
+    "deleteSuccess": "تم حذف نوع الدفع بنجاح",
+    "confirmDelete": "هل أنت متأكد أنك تريد حذف نوع الدفع هذا؟"
   }
 }
