--- a/src/locales/ar/quotation-line-management.json
+++ b/src/locales/ar/quotation-line-management.json
@@ -1,132 +1,132 @@
 {
-  "title": "Quotation Line Management",
-  "description": "Manage and edit quotation lines",
-  "create": "New Quotation Line",
-  "createDescription": "Enter new quotation line information",
-  "edit": "Edit Quotation Line",
-  "editDescription": "Edit quotation line information",
-  "delete": "Delete",
-  "deleteTitle": "Delete Quotation Line",
-  "quotationId": "Quotation ID",
-  "productId": "Product ID",
-  "productCode": "Product Code",
-  "productName": "Product Name",
-  "quantity": "Quantity",
-  "unitPrice": "Unit Price",
-  "discountRate1": "Discount Rate 1",
-  "discountAmount1": "Discount Amount 1",
-  "discountRate2": "Discount Rate 2",
-  "discountAmount2": "Discount Amount 2",
-  "discountRate3": "Discount Rate 3",
-  "discountAmount3": "Discount Amount 3",
-  "vatRate": "VAT Rate",
-  "vatAmount": "VAT Amount",
-  "lineTotal": "Line Total (Excl. VAT)",
-  "lineGrandTotal": "Line Total (Incl. VAT)",
-  "description": "Description",
-  "createdDate": "Created Date",
-  "updatedDate": "Updated Date",
-  "actions": "Actions",
-  "search": "Search",
-  "filterByQuotationId": "Filter by Quotation",
-  "filterByProductCode": "Filter by Product Code",
-  "filterByProductName": "Filter by Product Name",
-  "filterByQuantityRange": "Filter by Quantity Range",
-  "filterByUnitPriceRange": "Filter by Unit Price Range",
-  "filterByLineTotalRange": "Filter by Line Total Range",
-  "filterByLineGrandTotalRange": "Filter by Line Grand Total Range",
-  "noData": "No data found",
-  "confirmDelete": "Are you sure you want to delete this quotation line?",
-  "createSuccess": "Quotation line created successfully",
-  "updateSuccess": "Quotation line updated successfully",
-  "deleteSuccess": "Quotation line deleted successfully",
-  "createError": "An error occurred while creating quotation line",
-  "updateError": "An error occurred while updating quotation line",
-  "deleteError": "An error occurred while deleting quotation line",
-  "quotationIdRequired": "Quotation ID is required",
-  "productIdRequired": "Product selection is required",
-  "productNameRequired": "Product name is required",
-  "productNameMaxLength": "Product name must be at most 250 characters",
-  "productCodeMaxLength": "Product code must be at most 100 characters",
-  "quantityRequired": "Quantity is required",
-  "quantityMin": "Quantity must be 0 or greater",
-  "unitPriceRequired": "Unit price is required",
-  "unitPriceMin": "Unit price must be 0 or greater",
-  "discountRate1Range": "Discount rate 1 must be between 0 and 100",
-  "discountRate2Range": "Discount rate 2 must be between 0 and 100",
-  "discountRate3Range": "Discount rate 3 must be between 0 and 100",
-  "discountAmount1Min": "Discount amount 1 must be 0 or greater",
-  "discountAmount2Min": "Discount amount 2 must be 0 or greater",
-  "discountAmount3Min": "Discount amount 3 must be 0 or greater",
-  "vatRateRequired": "VAT rate is required",
-  "vatRateRange": "VAT rate must be between 0 and 100",
-  "descriptionMaxLength": "Description must be at most 250 characters",
-  "selectQuotation": "Select Quotation",
-  "selectProduct": "Select Product",
-  "enterProductCode": "Enter Product Code",
-  "enterProductName": "Enter Product Name",
-  "enterQuantity": "Enter Quantity",
-  "enterUnitPrice": "Enter Unit Price",
-  "enterDiscountRate1": "Enter Discount Rate 1 (0-100, Optional)",
-  "enterDiscountAmount1": "Enter Discount Amount 1 (Optional)",
-  "enterDiscountRate2": "Enter Discount Rate 2 (0-100, Optional)",
-  "enterDiscountAmount2": "Enter Discount Amount 2 (Optional)",
-  "enterDiscountRate3": "Enter Discount Rate 3 (0-100, Optional)",
-  "enterDiscountAmount3": "Enter Discount Amount 3 (Optional)",
-  "enterVatRate": "Enter VAT Rate (0-100)",
-  "enterDescription": "Enter Description (Optional)",
-  "calculation": "Calculation",
-  "calculationBreakdown": "Calculation Breakdown",
-  "subtotal": "Subtotal",
-  "afterDiscount1": "After Discount 1",
-  "afterDiscount2": "After Discount 2",
-  "afterDiscount3": "After Discount 3",
-  "vatBreakdown": "VAT Breakdown",
-  "grandTotal": "Grand Total",
-  "loading": "Loading...",
-  "save": "Save",
-  "cancel": "Cancel",
-  "close": "Close",
-  "clearFilters": "Clear Filters",
-  "applyFilters": "Apply Filters",
-  "minQuantity": "Min Quantity",
-  "maxQuantity": "Max Quantity",
-  "minUnitPrice": "Min Unit Price",
-  "maxUnitPrice": "Max Unit Price",
-  "minLineTotal": "Min Line Total",
-  "maxLineTotal": "Max Line Total",
-  "minLineGrandTotal": "Min Line Grand Total",
-  "maxLineGrandTotal": "Max Line Grand Total",
+  "title": "إدارة بنود عرض السعر",
+  "description": "إدارة وتعديل بنود عرض السعر",
+  "create": "بند عرض سعر جديد",
+  "createDescription": "أدخل معلومات بند عرض السعر الجديد",
+  "edit": "تعديل بند عرض السعر",
+  "editDescription": "تعديل معلومات بند عرض السعر",
+  "delete": "حذف",
+  "deleteTitle": "حذف بند عرض السعر",
+  "quotationId": "معرف عرض السعر",
+  "productId": "معرف المنتج",
+  "productCode": "رمز المنتج",
+  "productName": "اسم المنتج",
+  "quantity": "الكمية",
+  "unitPrice": "سعر الوحدة",
+  "discountRate1": "نسبة الخصم 1",
+  "discountAmount1": "مبلغ الخصم 1",
+  "discountRate2": "نسبة الخصم 2",
+  "discountAmount2": "مبلغ الخصم 2",
+  "discountRate3": "نسبة الخصم 3",
+  "discountAmount3": "مبلغ الخصم 3",
+  "vatRate": "نسبة الضريبة",
+  "vatAmount": "مبلغ الضريبة",
+  "lineTotal": "إجمالي البند (غير شامل الضريبة)",
+  "lineGrandTotal": "إجمالي البند (شامل الضريبة)",
+  "description": "الوصف",
+  "createdDate": "تاريخ الإنشاء",
+  "updatedDate": "تاريخ التحديث",
+  "actions": "الإجراءات",
+  "search": "بحث",
+  "filterByQuotationId": "تصفية حسب عرض السعر",
+  "filterByProductCode": "تصفية حسب رمز المنتج",
+  "filterByProductName": "تصفية حسب اسم المنتج",
+  "filterByQuantityRange": "تصفية حسب نطاق الكمية",
+  "filterByUnitPriceRange": "تصفية حسب نطاق سعر الوحدة",
+  "filterByLineTotalRange": "تصفية حسب نطاق إجمالي البند",
+  "filterByLineGrandTotalRange": "تصفية حسب نطاق الإجمالي الكلي للبند",
+  "noData": "لا توجد بيانات",
+  "confirmDelete": "هل أنت متأكد أنك تريد حذف بند عرض السعر هذا؟",
+  "createSuccess": "تم إنشاء بند عرض السعر بنجاح",
+  "updateSuccess": "تم تحديث بند عرض السعر بنجاح",
+  "deleteSuccess": "تم حذف بند عرض السعر بنجاح",
+  "createError": "حدث خطأ أثناء إنشاء بند عرض السعر",
+  "updateError": "حدث خطأ أثناء تحديث بند عرض السعر",
+  "deleteError": "حدث خطأ أثناء حذف بند عرض السعر",
+  "quotationIdRequired": "معرف عرض السعر مطلوب",
+  "productIdRequired": "اختيار المنتج مطلوب",
+  "productNameRequired": "اسم المنتج مطلوب",
+  "productNameMaxLength": "يجب أن يكون اسم المنتج 250 حرفًا كحد أقصى",
+  "productCodeMaxLength": "يجب أن يكون رمز المنتج 100 حرف كحد أقصى",
+  "quantityRequired": "الكمية مطلوبة",
+  "quantityMin": "يجب أن تكون الكمية 0 أو أكبر",
+  "unitPriceRequired": "سعر الوحدة مطلوب",
+  "unitPriceMin": "يجب أن يكون سعر الوحدة 0 أو أكبر",
+  "discountRate1Range": "يجب أن تكون نسبة الخصم 1 بين 0 و 100",
+  "discountRate2Range": "يجب أن تكون نسبة الخصم 2 بين 0 و 100",
+  "discountRate3Range": "يجب أن تكون نسبة الخصم 3 بين 0 و 100",
+  "discountAmount1Min": "يجب أن يكون مبلغ الخصم 1 0 أو أكبر",
+  "discountAmount2Min": "يجب أن يكون مبلغ الخصم 2 0 أو أكبر",
+  "discountAmount3Min": "يجب أن يكون مبلغ الخصم 3 0 أو أكبر",
+  "vatRateRequired": "نسبة الضريبة مطلوبة",
+  "vatRateRange": "يجب أن تكون نسبة الضريبة بين 0 و 100",
+  "descriptionMaxLength": "يجب أن يكون الوصف 250 حرفًا كحد أقصى",
+  "selectQuotation": "حدد عرض السعر",
+  "selectProduct": "حدد المنتج",
+  "enterProductCode": "أدخل رمز المنتج",
+  "enterProductName": "أدخل اسم المنتج",
+  "enterQuantity": "أدخل الكمية",
+  "enterUnitPrice": "أدخل سعر الوحدة",
+  "enterDiscountRate1": "أدخل نسبة الخصم 1 (0-100، اختياري)",
+  "enterDiscountAmount1": "أدخل مبلغ الخصم 1 (اختياري)",
+  "enterDiscountRate2": "أدخل نسبة الخصم 2 (0-100، اختياري)",
+  "enterDiscountAmount2": "أدخل مبلغ الخصم 2 (اختياري)",
+  "enterDiscountRate3": "أدخل نسبة الخصم 3 (0-100، اختياري)",
+  "enterDiscountAmount3": "أدخل مبلغ الخصم 3 (اختياري)",
+  "enterVatRate": "أدخل نسبة الضريبة (0-100)",
+  "enterDescription": "أدخل الوصف (اختياري)",
+  "calculation": "الحساب",
+  "calculationBreakdown": "تفاصيل الحساب",
+  "subtotal": "المجموع الفرعي",
+  "afterDiscount1": "بعد الخصم 1",
+  "afterDiscount2": "بعد الخصم 2",
+  "afterDiscount3": "بعد الخصم 3",
+  "vatBreakdown": "تفاصيل الضريبة",
+  "grandTotal": "الإجمالي الكلي",
+  "loading": "جاري التحميل...",
+  "save": "حفظ",
+  "cancel": "إلغاء",
+  "close": "إغلاق",
+  "clearFilters": "مسح عوامل التصفية",
+  "applyFilters": "تطبيق عوامل التصفية",
+  "minQuantity": "أقل كمية",
+  "maxQuantity": "أعلى كمية",
+  "minUnitPrice": "أقل سعر وحدة",
+  "maxUnitPrice": "أعلى سعر وحدة",
+  "minLineTotal": "أقل إجمالي بند",
+  "maxLineTotal": "أعلى إجمالي بند",
+  "minLineGrandTotal": "أقل إجمالي كلي للبند",
+  "maxLineGrandTotal": "أعلى إجمالي كلي للبند",
   "percentage": "%",
-  "getByQuotation": "Get by Quotation",
-  "allLines": "All Lines",
-  "linesForQuotation": "Quotation Lines",
-  "noLinesForQuotation": "No lines found for this quotation",
-  "calculationPreview": "Calculation Preview",
-  "baseAmount": "Base Amount",
-  "discountsApplied": "Discounts Applied",
-  "vatApplied": "VAT Applied",
-  "finalAmount": "Final Amount",
+  "getByQuotation": "الحصول حسب عرض السعر",
+  "allLines": "جميع البنود",
+  "linesForQuotation": "بنود عرض السعر",
+  "noLinesForQuotation": "لم يتم العثور على بنود لعرض السعر هذا",
+  "calculationPreview": "معاينة الحساب",
+  "baseAmount": "المبلغ الأساسي",
+  "discountsApplied": "الخصومات المطبقة",
+  "vatApplied": "الضريبة المطبقة",
+  "finalAmount": "المبلغ النهائي",
   "table": {
-    "id": "ID",
-    "quotationId": "Quotation ID",
-    "productCode": "Product Code",
-    "productName": "Product Name",
-    "quantity": "Quantity",
-    "unitPrice": "Unit Price",
-    "discountRate1": "Discount Rate 1",
-    "discountAmount1": "Discount Amount 1",
-    "discountRate2": "Discount Rate 2",
-    "discountAmount2": "Discount Amount 2",
-    "discountRate3": "Discount Rate 3",
-    "discountAmount3": "Discount Amount 3",
-    "vatRate": "VAT Rate",
-    "vatAmount": "VAT Amount",
-    "lineTotal": "Line Total (Excl. VAT)",
-    "lineGrandTotal": "Line Total (Incl. VAT)",
-    "createdDate": "Created Date",
-    "updatedDate": "Updated Date",
-    "showing": "Showing {{from}}-{{to}} of {{total}}",
-    "page": "Page {{current}} of {{total}}"
+    "id": "المعرف",
+    "quotationId": "معرف عرض السعر",
+    "productCode": "رمز المنتج",
+    "productName": "اسم المنتج",
+    "quantity": "الكمية",
+    "unitPrice": "سعر الوحدة",
+    "discountRate1": "نسبة الخصم 1",
+    "discountAmount1": "مبلغ الخصم 1",
+    "discountRate2": "نسبة الخصم 2",
+    "discountAmount2": "مبلغ الخصم 2",
+    "discountRate3": "نسبة الخصم 3",
+    "discountAmount3": "مبلغ الخصم 3",
+    "vatRate": "نسبة الضريبة",
+    "vatAmount": "مبلغ الضريبة",
+    "lineTotal": "إجمالي البند (غير شامل الضريبة)",
+    "lineGrandTotal": "إجمالي البند (شامل الضريبة)",
+    "createdDate": "تاريخ الإنشاء",
+    "updatedDate": "تاريخ التحديث",
+    "showing": "عرض {{from}}-{{to}} من {{total}}",
+    "page": "الصفحة {{current}} من {{total}}"
   }
 }
