--- a/src/locales/ar/quotation.json
+++ b/src/locales/ar/quotation.json
@@ -1,165 +1,165 @@
 {
-  "loading": "Loading...",
-  "saving": "Saving...",
-  "error": "Error",
-  "noData": "No data found",
-  "previous": "Previous",
-  "next": "Next",
-  "actions": "Actions",
-  "edit": "Edit",
-  "delete": "Delete",
-  "back": "Back",
-  "refresh": "Refresh",
-  "select": "Select",
-  "yes": "Yes",
-  "add": "Add",
-  "backToQuotations": "Back to Quotations",
-  "cancel": "Cancel",
-  "save": "Save",
-  "confirm": "Confirm",
-  "saveAndApply": "Save and Apply",
+  "loading": "جاري التحميل...",
+  "saving": "جاري الحفظ...",
+  "error": "خطأ",
+  "noData": "لا توجد بيانات",
+  "previous": "السابق",
+  "next": "التالي",
+  "actions": "الإجراءات",
+  "edit": "تعديل",
+  "delete": "حذف",
+  "back": "رجوع",
+  "refresh": "تحديث",
+  "select": "تحديد",
+  "yes": "نعم",
+  "add": "إضافة",
+  "backToQuotations": "العودة إلى عروض الأسعار",
+  "cancel": "إلغاء",
+  "save": "حفظ",
+  "confirm": "تأكيد",
+  "saveAndApply": "حفظ وتطبيق",
   "list": {
-    "revise": "Revise",
-    "showing": "Showing {{from}}-{{to}} / {{total}}"
+    "revise": "مراجعة",
+    "showing": "عرض {{from}}-{{to}} من {{total}}"
   },
   "detail": {
-    "title": "Quotation Detail"
+    "title": "تفاصيل عرض السعر"
   },
   "create": {
-    "title": "Create New Quotation",
-    "submit": "Save Quotation and Send for Approval",
-    "success": "Quotation Created Successfully",
-    "successMessage": "Quotation has been sent to the approval process.",
-    "error": "Quotation Could Not Be Created",
-    "errorMessage": "An error occurred while creating the quotation."
+    "title": "إنشاء عرض سعر جديد",
+    "submit": "حفظ عرض السعر وإرساله للموافقة",
+    "success": "تم إنشاء عرض السعر بنجاح",
+    "successMessage": "تم إرسال عرض السعر إلى عملية الموافقة.",
+    "error": "تعذر إنشاء عرض السعر",
+    "errorMessage": "حدث خطأ أثناء إنشاء عرض السعر."
   },
   "header": {
-    "title": "Quotation Information",
-    "customer": "Customer",
-    "selectCustomer": "Select customer",
-    "shippingAddress": "Shipping Address",
-    "selectShippingAddress": "Select shipping address",
-    "representative": "Sales Representative",
-    "selectRepresentative": "Select representative",
-    "offerType": "Offer Type",
-    "selectOfferType": "Select offer type",
-    "currency": "Currency",
-    "selectCurrency": "Please select currency",
-    "showExchangeRates": "Show Exchange Rates",
-    "offerDate": "Offer Date",
-    "deliveryDate": "Delivery Date",
-    "paymentType": "Payment Type",
-    "selectPaymentType": "Select payment type",
-    "description": "Description",
-    "descriptionPlaceholder": "Enter description",
-    "offerNo": "Offer No",
-    "offerNoPlaceholder": "Offer number",
+    "title": "معلومات عرض السعر",
+    "customer": "العميل",
+    "selectCustomer": "حدد العميل",
+    "shippingAddress": "عنوان الشحن",
+    "selectShippingAddress": "حدد عنوان الشحن",
+    "representative": "مندوب المبيعات",
+    "selectRepresentative": "حدد المندوب",
+    "offerType": "نوع العرض",
+    "selectOfferType": "حدد نوع العرض",
+    "currency": "العملة",
+    "selectCurrency": "يرجى تحديد العملة",
+    "showExchangeRates": "إظهار أسعار الصرف",
+    "offerDate": "تاريخ العرض",
+    "deliveryDate": "تاريخ التسليم",
+    "paymentType": "نوع الدفع",
+    "selectPaymentType": "حدد نوع الدفع",
+    "description": "الوصف",
+    "descriptionPlaceholder": "أدخل الوصف",
+    "offerNo": "رقم العرض",
+    "offerNoPlaceholder": "رقم العرض",
     "currencyChange": {
-      "title": "Currency Change",
-      "message": "When the currency changes, all existing lines will be recalculated according to the new currency. Do you approve this operation?"
+      "title": "تغيير العملة",
+      "message": "عند تغيير العملة، سيتم إعادة حساب جميع الأسطر الموجودة وفقًا للعملة الجديدة. هل توافق على هذه العملية؟"
     }
   },
   "lines": {
-    "title": "Quotation Lines",
-    "add": "Add Line",
-    "empty": "No lines added yet",
-    "emptyDescription": "Use \"Select Stock\" or \"Add Line\" button to add quotation lines",
-    "itemCount": "line",
-    "editLine": "Edit Line",
-    "selectStock": "Select Stock",
-    "selectProduct": "Select Product",
-    "selectStockFirst": "Stock not selected",
-    "stock": "Stock",
-    "productCode": "Stock Code",
-    "enterProductCode": "Enter product code or search",
-    "productName": "Stock Name",
-    "enterProductName": "Enter product name",
-    "quantity": "Quantity",
-    "unitPrice": "Unit Price",
-    "discount1": "Discount 1 %",
-    "discount2": "Discount 2 %",
-    "discount3": "Discount 3 %",
-    "discounts": "Discounts",
-    "discountAmount": "Discount Amount",
-    "netPrice": "Net Price",
-    "vatRate": "VAT Rate %",
-    "lineTotal": "Line Total (VAT Included)",
-    "calculations": "Calculations",
-    "required": "At least 1 line must be added",
-    "noProductsFound": "No products found",
+    "title": "بنود عرض السعر",
+    "add": "إضافة بند",
+    "empty": "لم تتم إضافة بنود بعد",
+    "emptyDescription": "استخدم زر \"تحديد المخزون\" أو \"إضافة بند\" لإضافة بنود لعرض السعر",
+    "itemCount": "بند",
+    "editLine": "تعديل البند",
+    "selectStock": "تحديد المخزون",
+    "selectProduct": "تحديد المنتج",
+    "selectStockFirst": "لم يتم تحديد المخزون",
+    "stock": "المخزون",
+    "productCode": "رمز المخزون",
+    "enterProductCode": "أدخل رمز المنتج أو ابحث",
+    "productName": "اسم المخزون",
+    "enterProductName": "أدخل اسم المنتج",
+    "quantity": "الكمية",
+    "unitPrice": "سعر الوحدة",
+    "discount1": "خصم 1 %",
+    "discount2": "خصم 2 %",
+    "discount3": "خصم 3 %",
+    "discounts": "الخصومات",
+    "discountAmount": "مبلغ الخصم",
+    "netPrice": "السعر الصافي",
+    "vatRate": "نسبة الضريبة %",
+    "lineTotal": "إجمالي البند (شامل الضريبة)",
+    "calculations": "الحسابات",
+    "required": "يجب إضافة بند واحد على الأقل",
+    "noProductsFound": "لم يتم العثور على منتجات",
     "delete": {
-      "confirmTitle": "Delete Line",
-      "confirmMessage": "Are you sure you want to delete this line?"
+      "confirmTitle": "حذف البند",
+      "confirmMessage": "هل أنت متأكد أنك تريد حذف هذا البند؟"
     }
   },
   "exchangeRates": {
-    "title": "Exchange Rates",
-    "currency": "Currency",
-    "rate": "Rate",
-    "date": "Rate Date",
-    "isOfficial": "Official Rate",
-    "official": "Official",
-    "custom": "Custom",
-    "empty": "No exchange rates found",
-    "status": "Status",
+    "title": "أسعار الصرف",
+    "currency": "العملة",
+    "rate": "السعر",
+    "date": "تاريخ السعر",
+    "isOfficial": "سعر رسمي",
+    "official": "رسمي",
+    "custom": "مخصص",
+    "empty": "لم يتم العثور على أسعار صرف",
+    "status": "الحالة",
     "dialog": {
-      "title": "Exchange Rates",
-      "description": "View and edit exchange rate values if needed. Modified rates will not be marked as official rates."
+      "title": "أسعار الصرف",
+      "description": "عرض وتعديل قيم سعر الصرف إذا لزم الأمر. لن يتم تمييز الأسعار المعدلة كأسعار رسمية."
     }
   },
   "summary": {
-    "title": "Summary",
-    "subtotal": "Subtotal",
-    "totalVat": "Total VAT",
-    "grandTotal": "Grand Total"
+    "title": "الملخص",
+    "subtotal": "المجموع الفرعي",
+    "totalVat": "إجمالي الضريبة",
+    "grandTotal": "الإجمالي الكلي"
   },
   "offerType": {
-    "domestic": "Domestic",
-    "export": "Export"
+    "domestic": "محلي",
+    "export": "تصدير"
   },
   "wizard": {
-    "title": "Create New Quotation",
+    "title": "إنشاء عرض سعر جديد",
     "step1": {
-      "title": "Step 1: Quotation Information",
-      "description": "Enter quotation header information and exchange rates",
+      "title": "الخطوة 1: معلومات عرض السعر",
+      "description": "أدخل معلومات رأس عرض السعر وأسعار الصرف",
       "validation": {
-        "offerType": "Offer Type",
-        "currency": "Currency",
-        "exchangeRate": "Exchange Rate"
+        "offerType": "نوع العرض",
+        "currency": "العملة",
+        "exchangeRate": "سعر الصرف"
       },
       "exchangeRate": {
-        "required": "At least one exchange rate must be added for non-TRY currencies"
+        "required": "يجب إضافة سعر صرف واحد على الأقل للعملات غير TRY"
       },
       "currency": {
         "try": {
-          "info": "Exchange rate is not required when TRY is selected"
+          "info": "سعر الصرف غير مطلوب عند اختيار TRY"
         }
       }
     },
     "step2": {
-      "title": "Step 2: Quotation Lines",
-      "description": "Add product and price information",
-      "info": "You must add at least one line",
+      "title": "الخطوة 2: بنود عرض السعر",
+      "description": "إضافة معلومات المنتج والسعر",
+      "info": "يجب عليك إضافة بند واحد على الأقل",
       "validation": {
-        "noLines": "At least one line must be added",
-        "invalidLines": "All lines must have valid information",
-        "allValid": "{{count}} lines successfully added"
+        "noLines": "يجب إضافة بند واحد على الأقل",
+        "invalidLines": "يجب أن تحتوي جميع البنود على معلومات صالحة",
+        "allValid": "تمت إضافة {{count}} بنود بنجاح"
       }
     },
     "step3": {
-      "title": "Step 3: Summary and Approval",
-      "description": "Review information and save quotation",
+      "title": "الخطوة 3: الملخص والموافقة",
+      "description": "مراجعة المعلومات وحفظ عرض السعر",
       "header": {
-        "title": "Quotation Information"
+        "title": "معلومات عرض السعر"
       },
       "lines": {
-        "title": "Quotation Lines"
+        "title": "بنود عرض السعر"
       },
       "summary": {
-        "title": "Final Summary"
+        "title": "الملخص النهائي"
       },
       "approval": {
-        "info": "The quotation will be automatically sent to the approval process after saving"
+        "info": "سيتم إرسال عرض السعر تلقائيًا إلى عملية الموافقة بعد الحفظ"
       }
     }
   }
