--- a/src/locales/ar/shipping-address-management.json
+++ b/src/locales/ar/shipping-address-management.json
@@ -1,77 +1,77 @@
 {
-  "title": "Shipping Address Management",
-  "create": "New Shipping Address",
-  "edit": "Edit Shipping Address",
-  "delete": "Delete",
-  "address": "Address",
-  "postalCode": "Postal Code",
-  "contactPerson": "Contact Person",
-  "phone": "Phone",
-  "notes": "Notes",
-  "customerId": "Customer",
-  "countryId": "Country",
-  "cityId": "City",
-  "districtId": "District",
-  "customerName": "Customer Name",
-  "countryName": "Country Name",
-  "cityName": "City Name",
-  "districtName": "District Name",
-  "location": "Location",
-  "createdDate": "Created Date",
-  "updatedDate": "Updated Date",
-  "actions": "Actions",
-  "search": "Search",
-  "refresh": "Refresh",
-  "noData": "No data found",
-  "confirmDelete": "Delete Shipping Address",
-  "confirmDeleteMessage": "Are you sure you want to delete this shipping address? This action cannot be undone.",
-  "createSuccess": "Shipping address created successfully",
-  "updateSuccess": "Shipping address updated successfully",
-  "deleteSuccess": "Shipping address deleted successfully",
-  "createError": "An error occurred while creating shipping address",
-  "updateError": "An error occurred while updating shipping address",
-  "deleteError": "An error occurred while deleting shipping address",
-  "addressRequired": "Address is required",
-  "addressMaxLength": "Address can be at most 150 characters",
-  "postalCodeMaxLength": "Postal code can be at most 20 characters",
-  "contactPersonMaxLength": "Contact person can be at most 100 characters",
-  "phoneMaxLength": "Phone can be at most 20 characters",
-  "notesMaxLength": "Notes can be at most 100 characters",
-  "customerIdRequired": "Customer selection is required",
-  "enterAddress": "Enter Address",
-  "enterPostalCode": "Enter Postal Code",
-  "enterContactPerson": "Enter Contact Person",
-  "enterPhone": "Enter Phone",
-  "enterNotes": "Enter Notes",
-  "selectCustomer": "Select Customer",
-  "selectCountry": "Select Country",
-  "selectCity": "Select City",
-  "selectDistrict": "Select District",
-  "noCountrySelected": "No country selected",
-  "noCitySelected": "No city selected",
-  "noDistrictSelected": "No district selected",
-  "selectCountryFirst": "Select country first",
-  "selectCityFirst": "Select city first",
-  "createDescription": "Enter new shipping address information",
-  "editDescription": "Edit shipping address information",
+  "title": "إدارة عناوين الشحن",
+  "create": "عنوان شحن جديد",
+  "edit": "تحرير عنوان الشحن",
+  "delete": "حذف",
+  "address": "العنوان",
+  "postalCode": "الرمز البريدي",
+  "contactPerson": "الشخص المسؤول",
+  "phone": "الهاتف",
+  "notes": "ملاحظات",
+  "customerId": "العميل",
+  "countryId": "البلد",
+  "cityId": "المدينة",
+  "districtId": "المنطقة",
+  "customerName": "اسم العميل",
+  "countryName": "اسم البلد",
+  "cityName": "اسم المدينة",
+  "districtName": "اسم المنطقة",
+  "location": "الموقع",
+  "createdDate": "تاريخ الإنشاء",
+  "updatedDate": "تاريخ التحديث",
+  "actions": "إجراءات",
+  "search": "بحث",
+  "refresh": "تحديث",
+  "noData": "لم يتم العثور على بيانات",
+  "confirmDelete": "حذف عنوان الشحن",
+  "confirmDeleteMessage": "هل أنت متأكد أنك تريد حذف عنوان الشحن هذا؟ لا يمكن التراجع عن هذا الإجراء.",
+  "createSuccess": "تم إنشاء عنوان الشحن بنجاح",
+  "updateSuccess": "تم تحديث عنوان الشحن بنجاح",
+  "deleteSuccess": "تم حذف عنوان الشحن بنجاح",
+  "createError": "حدث خطأ أثناء إنشاء عنوان الشحن",
+  "updateError": "حدث خطأ أثناء تحديث عنوان الشحن",
+  "deleteError": "حدث خطأ أثناء حذف عنوان الشحن",
+  "addressRequired": "العنوان مطلوب",
+  "addressMaxLength": "يمكن أن يكون العنوان 150 حرفًا كحد أقصى",
+  "postalCodeMaxLength": "يمكن أن يكون الرمز البريدي 20 حرفًا كحد أقصى",
+  "contactPersonMaxLength": "يمكن أن يكون الشخص المسؤول 100 حرف كحد أقصى",
+  "phoneMaxLength": "يمكن أن يكون الهاتف 20 حرفًا كحد أقصى",
+  "notesMaxLength": "يمكن أن تكون الملاحظات 100 حرف كحد أقصى",
+  "customerIdRequired": "اختيار العميل مطلوب",
+  "enterAddress": "أدخل العنوان",
+  "enterPostalCode": "أدخل الرمز البريدي",
+  "enterContactPerson": "أدخل الشخص المسؤول",
+  "enterPhone": "أدخل الهاتف",
+  "enterNotes": "أدخل الملاحظات",
+  "selectCustomer": "اختر العميل",
+  "selectCountry": "اختر البلد",
+  "selectCity": "اختر المدينة",
+  "selectDistrict": "اختر المنطقة",
+  "noCountrySelected": "لم يتم اختيار بلد",
+  "noCitySelected": "لم يتم اختيار مدينة",
+  "noDistrictSelected": "لم يتم اختيار منطقة",
+  "selectCountryFirst": "اختر البلد أولاً",
+  "selectCityFirst": "اختر المدينة أولاً",
+  "createDescription": "أدخل معلومات عنوان الشحن الجديد",
+  "editDescription": "تحرير معلومات عنوان الشحن",
   "table": {
-    "id": "ID",
-    "showing": "Showing {{from}}-{{to}} / {{total}}",
-    "page": "Page {{current}} / {{total}}",
-    "customerName": "Customer Name",
-    "address": "Address",
-    "postalCode": "Postal Code",
-    "contactPerson": "Contact Person",
-    "phone": "Phone",
-    "location": "Location",
-    "createdDate": "Created Date",
-    "actions": "Actions"
+    "id": "المعرف",
+    "showing": "عرض {{from}}-{{to}} / {{total}}",
+    "page": "صفحة {{current}} / {{total}}",
+    "customerName": "اسم العميل",
+    "address": "العنوان",
+    "postalCode": "الرمز البريدي",
+    "contactPerson": "الشخص المسؤول",
+    "phone": "الهاتف",
+    "location": "الموقع",
+    "createdDate": "تاريخ الإنشاء",
+    "actions": "إجراءات"
   },
-  "loading": "Loading...",
-  "previous": "Previous",
-  "next": "Next",
-  "cancel": "Cancel",
-  "save": "Save",
-  "saving": "Saving...",
-  "deleting": "Deleting..."
+  "loading": "جاري التحميل...",
+  "previous": "السابق",
+  "next": "التالي",
+  "cancel": "إلغاء",
+  "save": "حفظ",
+  "saving": "جاري الحفظ...",
+  "deleting": "جاري الحذف..."
 }
