--- a/src/locales/ar/user-discount-limit-management.json
+++ b/src/locales/ar/user-discount-limit-management.json
@@ -1,68 +1,35 @@
 {
-  "title": "User Discount Limit Management",
-  "description": "Manage and edit user discount limits",
-  "create": "New Discount Limit",
-  "edit": "Edit Discount Limit",
-  "editDescription": "Edit discount limit information",
-  "createDescription": "Enter new discount limit information",
-  "delete": "Delete",
-  "deleteTitle": "Delete Discount Limit",
-  "salesperson": "Salesperson",
-  "erpProductGroupCode": "ERP Product Group Code",
-  "maxDiscount1": "Max Discount 1",
-  "maxDiscount2": "Max Discount 2",
-  "maxDiscount3": "Max Discount 3",
-  "salespersonName": "Salesperson Name",
-  "createdDate": "Created Date",
-  "updatedDate": "Updated Date",
-  "actions": "Actions",
-  "search": "Search",
-  "filterBySalesperson": "Filter by Salesperson",
-  "filterByGroup": "Filter by Product Group",
-  "filterByDiscount": "Filter by Discount Range",
-  "noData": "No data found",
-  "confirmDelete": "Are you sure you want to delete this discount limit?",
-  "createSuccess": "Discount limit created successfully",
-  "updateSuccess": "Discount limit updated successfully",
-  "deleteSuccess": "Discount limit deleted successfully",
-  "createError": "An error occurred while creating discount limit",
-  "updateError": "An error occurred while updating discount limit",
-  "deleteError": "An error occurred while deleting discount limit",
-  "alreadyExists": "A discount limit already exists for this salesperson and product group combination",
-  "salespersonRequired": "Salesperson selection is required",
-  "erpProductGroupCodeRequired": "ERP product group code is required",
-  "erpProductGroupCodeMaxLength": "ERP product group code must be at most 50 characters",
-  "maxDiscount1Required": "Max discount 1 is required",
-  "maxDiscount1Range": "Max discount 1 must be between 0 and 100",
-  "maxDiscount2Range": "Max discount 2 must be between 0 and 100",
-  "maxDiscount3Range": "Max discount 3 must be between 0 and 100",
-  "selectSalesperson": "Select Salesperson",
-  "enterErpProductGroupCode": "Enter ERP Product Group Code",
-  "enterMaxDiscount1": "Enter Max Discount 1 (0-100)",
-  "enterMaxDiscount2": "Enter Max Discount 2 (0-100, Optional)",
-  "enterMaxDiscount3": "Enter Max Discount 3 (0-100, Optional)",
-  "loading": "Loading...",
-  "save": "Save",
-  "cancel": "Cancel",
-  "close": "Close",
-  "clearFilters": "Clear Filters",
-  "applyFilters": "Apply Filters",
-  "minDiscount": "Min Discount",
-  "maxDiscount": "Max Discount",
-  "percentage": "%",
-  "getBySalesperson": "Get by Salesperson",
-  "getByGroup": "Get by Group",
-  "getBySalespersonAndGroup": "Get by Salesperson and Group",
+  "menu": "إدارة حدود الخصم",
+  "title": "إدارة حدود الخصم",
+  "description": "إدارة حدود خصم المستخدم",
+  "addButton": "إضافة حد جديد",
+  "deleteTitle": "حذف الحد",
+  "deleteMessage": "هل أنت متأكد أنك تريد حذف حد الخصم هذا؟",
+  "deleteSuccess": "تم حذف حد الخصم بنجاح",
   "table": {
-    "id": "ID",
-    "salespersonName": "Salesperson Name",
-    "erpProductGroupCode": "ERP Product Group Code",
-    "maxDiscount1": "Max Discount 1",
-    "maxDiscount2": "Max Discount 2",
-    "maxDiscount3": "Max Discount 3",
-    "createdDate": "Created Date",
-    "updatedDate": "Updated Date",
-    "showing": "Showing {{from}}-{{to}} of {{total}}",
-    "page": "Page {{current}} of {{total}}"
+    "user": "المستخدم",
+    "limit": "حد الخصم (%)",
+    "description": "الوصف",
+    "status": "الحالة",
+    "actions": "إجراءات",
+    "searchPlaceholder": "البحث في الحدود...",
+    "showing": "عرض {{from}}-{{to}} من {{total}}",
+    "page": "صفحة {{current}} من {{total}}",
+    "rowsPerPage": "الصفوف لكل صفحة"
+  },
+  "form": {
+    "addTitle": "إضافة حد خصم جديد",
+    "editTitle": "تعديل حد الخصم",
+    "user": "المستخدم",
+    "limit": "الحد (%)",
+    "description": "الوصف",
+    "status": "الحالة",
+    "active": "نشط",
+    "passive": "غير نشط",
+    "cancel": "إلغاء",
+    "save": "حفظ",
+    "required": "مطلوب",
+    "successAdd": "تم إضافة حد الخصم بنجاح",
+    "successUpdate": "تم تحديث حد الخصم بنجاح"
   }
 }
