--- a/src/locales/ar/user-management.json
+++ b/src/locales/ar/user-management.json
@@ -1,62 +1,38 @@
 {
-  "menu": "User Management",
-  "description": "Manage and edit users",
-  "addButton": "Add New User",
+  "menu": "إدارة المستخدمين",
+  "title": "إدارة المستخدمين",
+  "description": "إدارة وتعديل المستخدمين",
+  "addButton": "إضافة مستخدم جديد",
+  "deleteTitle": "حذف المستخدم",
+  "deleteMessage": "هل أنت متأكد أنك تريد حذف هذا المستخدم؟",
+  "deleteSuccess": "تم حذف المستخدم بنجاح",
   "table": {
-    "id": "ID",
-    "username": "Username",
-    "email": "Email",
-    "fullName": "Full Name",
-    "role": "Role",
-    "status": "Status",
-    "createdDate": "Created Date",
-    "active": "Active",
-    "inactive": "Inactive",
-    "confirmed": "Confirmed",
-    "showing": "Showing {{from}}-{{to}} / {{total}}",
-    "page": "Page {{current}} / {{total}}",
-    "actions": "Actions",
-    "noData": "No data",
-    "loading": "Loading...",
-    "previous": "Previous",
-    "next": "Next",
-    "edit": "Edit",
-    "delete": "Delete"
+    "name": "الاسم",
+    "email": "البريد الإلكتروني",
+    "role": "الدور",
+    "status": "الحالة",
+    "actions": "إجراءات",
+    "searchPlaceholder": "البحث في المستخدمين...",
+    "showing": "عرض {{from}}-{{to}} من {{total}}",
+    "page": "صفحة {{current}} من {{total}}",
+    "rowsPerPage": "الصفوف لكل صفحة"
   },
   "form": {
-    "editUser": "Edit User",
-    "addUser": "Add New User",
-    "editDescription": "Edit user information",
-    "addDescription": "Enter new user information",
-    "username": "Username",
-    "usernamePlaceholder": "Enter username",
-    "email": "Email",
-    "emailPlaceholder": "Enter email address",
-    "password": "Password",
-    "passwordPlaceholder": "Enter password (min 8 chars)",
-    "firstName": "First Name",
-    "firstNamePlaceholder": "Enter first name",
-    "lastName": "Last Name",
-    "lastNamePlaceholder": "Enter last name",
-    "phoneNumber": "Phone Number",
-    "phoneNumberPlaceholder": "Enter phone number",
-    "role": "Role",
-    "rolePlaceholder": "Enter role",
-    "isActive": "Active",
-    "isActiveDescription": "User active status",
-    "save": "Save",
-    "saving": "Saving...",
-    "cancel": "Cancel"
-  },
-  "stats": {
-    "totalUsers": "Total Users",
-    "activeUsers": "Active Users",
-    "newThisMonth": "New This Month",
-    "confirmedUsers": "Confirmed Users",
-    "loading": "Loading..."
-  },
-  "delete": {
-    "confirmTitle": "Delete User",
-    "confirmMessage": "Are you sure you want to delete user {{username}}?"
+    "addTitle": "إضافة مستخدم جديد",
+    "editTitle": "تعديل المستخدم",
+    "firstName": "الاسم الأول",
+    "lastName": "الاسم الأخير",
+    "email": "البريد الإلكتروني",
+    "role": "الدور",
+    "password": "كلمة المرور",
+    "confirmPassword": "تأكيد كلمة المرور",
+    "status": "الحالة",
+    "active": "نشط",
+    "passive": "غير نشط",
+    "cancel": "إلغاء",
+    "save": "حفظ",
+    "required": "مطلوب",
+    "successAdd": "تم إضافة المستخدم بنجاح",
+    "successUpdate": "تم تحديث المستخدم بنجاح"
   }
 }
